--- a/01 다이나믹 프로그래밍.md
+++ b/01 다이나믹 프로그래밍.md
@@ -1,6 +1,6 @@
-# 동적 계획법   
-> Dinamic Programming, DP 라고 부른다.      
-         
+# 다이나믹 프로그래밍
+> Dinamic Programming, DP, 동적계획법이라고 부른다.        
+             
 **큰 문제를 공통된 로직을 갖는 작은 문제로 나눠서 푸는 알고리즘이다**           
 다이나믹 프로그래밍이 수행되려면 2가지 속성이 만족해야 된다.         
       
@@ -37,21 +37,22 @@
 * 서울에서 부산을 가는 가장 빠른 길이 ```대전```, ```대구```를 순서대로 거쳐야 한다면      
 * 대전에서 부산을 가는 가장 바른 길은 ```대구```를 거쳐가야 한다.           
       
-이를 다시 피보나치로 대입시켜 보면 피보나치의 작은 문제들로 큰 문제의 값을 도출해내는 것이다.     
-     
-**꿀팁**   
-Optimal Substructure를 만족한다면, 문제의 크기에 상관없이 어떤 한 문제의 정답은 일정하다.     
+피보나치에서도 이와 같은 개념을 대입시켰다.    
+`d[0]`과 `d[1]`을 지나야 `d[2]`의 값을 얻을 수 있다.  
+         
+참고로 중요한 점은 **Optimal Substructure를 만족한다면,**    
+문제의 크기에 상관없이 어떤 한 **문제의 정답은 일정하다.**         
   
 * 10번째 피보나치 수를 구하면서 구한 4번째 피보나치 수
 * 9번째 피보나치 수를 구하면서 구한 4번째 피보나치 수
 * ...
 * 5번째 피보나치 수를 구하면서 구한 4번째 피보나치 수
 * 4번째 피보나치 수를 구하면서 구한 4번째 피보나치 수
-        
-위에서 말하는 4번째 피보나치 수는 모두 같다!!!
-하지만 여기서 알 수 있듯이 중복이 계속해서 발생하게 된다.   
-
-## 1.3. 다이나믹 프로그래밍의 특징   
+            
+위에서 나타난 결과처럼 **4번째 피보나치 수는 모두 같다.**         
+하지만, 여기서 알 수 있는 문제점은 중복이 계속해서 발생한다는 점이다.           
+  
+# 다이나믹 프로그래밍의 특징   
 * 다이나믹 프로그래밍에서 각 문제는 한 번만 풀어야 한다.  
 * Optimal Substructure를 만족하기 때문에, **같은 문제는 구할 때마다 정답이 같다.**   
 * 따라서, 정답을 한 번 구했으면, 정답을 어딘가에 메모해놓는다.   
