--- a/03 순열.md
+++ b/03 순열.md
@@ -10,10 +10,14 @@ nPr = n * (n-1) *  ... * (n-r+1)
 ```
 예를 들어 3P2면 `(3 * ((3-2)+1))`이다.     
 즉, r번 곱해지는 것이다.  
+    
+```   
+nPr = n * (n-1) *  ... * (n-n+1)  
+```
+만약, r이 n이랑 같다면? `n!` 팩토리얼이다.  
+   
 
-이중 r이 n이랑 같다면? `n!` 팩토리얼이다.  
-
-그럼 25명 반에서 2명 뽑느다면?  
+그럼 25명 반에서 2명 뽑는다면?  
 25 * 24 -> 600    
   
 ___
