--- a/03 순열.md
+++ b/03 순열.md
@@ -19,22 +19,21 @@ nPr = n * (n-1) *  ... * (n-n+1)
 
 그럼 25명 반에서 2명 뽑는다면?  
 25 * 24 -> 600    
-  
-___
-순열이야 조합이야?  
-나열된 순서가 다른데 의미가 있다면? 순열    
-나열된 순서가 다른데 의미가 없다면? 조합      
-
+          
+## 순열이랑 조합이 헷갈린다면?     
+나열된 순서가 다른데 의미가 있다면? 순열      
+나열된 순서가 다른데 의미가 없다면? 조합           
+    
 * 다수의 알고리즘 문제들은 순서화된 요소들의 집합에서 최선의 방법을 찾는 것과 관련 있다.   
 TSP (외판원 순회)  
 
 * N개의 요소들에 대해서 n! 개의 순열들이 존재한다.  
   * 12! = 479.001.600
   * 10까지가 맥시멈으로 생각하자  
+  
+## 순열을 생성하는 방법
 
-___
-순열을 생성하는 방법
-
+**Case**
 ```java
 numbers[] : 순열 저장 배열 
 isSelected[] : 인덱스에 해당하는 숫자가 사용 중인지 저장하는 배열  
@@ -54,7 +53,8 @@ perm(cnt) // cnt : 현재까지 뽑은 순열 수의 개수
 // 여기서 중요한 것은 원소의 갯수 즉, 인덱스의 번호가 바뀌는게 중요하다
 // 그렇기에 cnt+1의 작업을 한다.   
 ```
-
+    
+**실제 구현**   
 ```java
 package com.ssafy.exhaustive;
 
@@ -87,5 +87,8 @@ public class PermutationTest {
 		}
 	}
 }
+```
 
+**c++의 NextPermutation() Java에서 구현해보기**   
+```java
 ```
