--- a/03 순열.md
+++ b/03 순열.md
@@ -24,12 +24,11 @@ nPr = n * (n-1) *  ... * (n-n+1)
 나열된 순서가 다른데 의미가 있다면? 순열      
 나열된 순서가 다른데 의미가 없다면? 조합           
     
-* 다수의 알고리즘 문제들은 순서화된 요소들의 집합에서 최선의 방법을 찾는 것과 관련 있다.   
-TSP (외판원 순회)  
-
+* 다수의 알고리즘 문제들은 순서화된 요소들의 집합에서 최선의 방법을 찾는 것과 관련 있다. (TSP-외판원 순회)        
+    
 * N개의 요소들에 대해서 n! 개의 순열들이 존재한다.  
-  * 12! = 479.001.600
-  * 10까지가 맥시멈으로 생각하자  
+  * 12! = 479.001.600     
+  * 10까지가 순열을 사용할 수 있는 제한의 최대 범위라고 생각하자           
   
 ## 순열을 생성하는 방법
 
