--- a/03 순열.md
+++ b/03 순열.md
@@ -18,8 +18,12 @@ nPr = n * (n-1) *  ... * (n-n+1)
    
 
 그럼 25명 반에서 2명 뽑는다면?  
-25 * 24 -> 600    
-          
+25 * 24 -> 600      
+    
+쉽게 푸는 방법으로     
+25부터 r개만큼의 카운트 만큼 1개씩 내려가면서 곱한다.        
+`25P2도 -> 25 * 24`로 계산하면 된다.        
+     
 	  
 ## 순열이랑 조합이 헷갈린다면?     
 나열된 순서가 다른데 의미가 있다면? 순열      
