--- a/04 조합.md
+++ b/04 조합.md
@@ -18,6 +18,31 @@ nCr = n-1Cr-1 + n-1Cr
 조금 이해가 어려울 수 있지만 이를 코드를 통해 알아보면 바로 이해가 될 것이다.         
 
 ```java
+public class Combination { 
+    public static void main(String[] args) { 
+        int[] arr = new int[5]; 
+	combination(arr, 0, 5, 3, 0); 
+    } 
+    
+    public static void combination(int[] arr, int index, int n, int r, int target) { 
+        if (r == 0) print(arr, index); 
+	else if (target == n) return;  
+	else { 
+	    arr[index] = target; 
+	    combination(arr, index + 1, n, r - 1, target + 1); 
+	    combination(arr, index, n, r, target + 1); 
+	} 
+    }//end combination() 
+    
+    public static void print(int[] arr, int length) { 
+        for (int i = 0; i < length; i++) {
+	    System.out.print(arr[i]); System.out.println(""); 
+	} 
+    }
+}
+```
+
+```java
 nCr -> n개의 원소 중 r개 원소를 갖는 조합 생성  
 input[] : n개의 원소를 가지고 있는 배열  
 numbers[] : r개의 크기의 배열, 조합이 저장될 배열   
