--- a/04 조합.md
+++ b/04 조합.md
@@ -5,7 +5,8 @@
      
 즉, `nCr`이 주어지면, n개중 r개를 뽑는 경우의 수/집합을 구하는 것이다.    
    
-**조합을 구하는 공식**   
+## 조합을 구하는 공식   
+**점화식을 통한 조합 만들기**
 ```
 nCr = n-1Cr-1 + n-1Cr
 ```
@@ -14,9 +15,10 @@ nCr = n-1Cr-1 + n-1Cr
 * `nCr` : 현재 우리가 구하려는 값 
 * `n-1Cr-1` : 한개를 뽑았다 가정한 값 , 대신 앞으로 뽑을 r은 1개 줄어든다.  
 * `n-1Cr` : 한개를 뽑지 않았다고 가정한 값, 대신 앞으로 뽑을 r은 그대로고, 다음부터 뽑아야 하니 n-1    
-     
-조금 이해가 어려울 수 있지만 이를 코드를 통해 알아보면 바로 이해가 될 것이다.         
-
+            
+조금 이해가 어려울 수 있지만 이를 코드를 통해 알아보면 바로 이해가 될 것이다.               
+           
+**점화식을 통한 조합 만들기**
 ```java
 public class Combination { 
     public static void main(String[] args) { 
@@ -40,7 +42,28 @@ public class Combination {
 	} 
     }
 }
+```   
+점화식을 그대로 재귀 함수만을 이용해서 코드로 옮겼다.              
+배열을 이용해서 조합으로 지정된 값들을 저장해놓았다.  
+  
+```java
+    int temp = arr[index]; 
+    arr[index] = target; 
+    combination(arr, index + 1, n, r - 1, target + 1); 
+    arr[index] = temp; 
+    combination(arr, index, n, r, target + 1); 
 ```
+           
+원래는 배열에 넣었던 값도, 재귀를 끝나면 원래대로 초기화를 시켜줘야 하지만       
+어차피 재귀를 돔면서 값을 덮어주기 때문에 단순하게 처음에 넣는 작업만한다.     
+    
+   
+   
+   
+
+
+  
+
 
 ```java
 nCr -> n개의 원소 중 r개 원소를 갖는 조합 생성  
