--- a/04 조합.md
+++ b/04 조합.md
@@ -102,4 +102,7 @@ public class CombinationTest {
 		}
 	}
 }
-```
+```      
+반복문과 재귀를 이용한 방법으로 풀었다.                        
+이런식으로 코드를 작성할 경우, `combination(cnt, i+1);` 를 생략해도 된다.               
+    
