--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -1,16 +1,16 @@
 # 부분집합 
-* 집합에 포함된 원소를 선택하는 것이다.   
-* 집합에 하위 개념이므로, 집합과 마찬가지로 순서는 상관없다.   
-* 다수의 중요 알고리즘들이 원소들의 그룹에서 최적의 부분 집합을 찾는 것이다.
-* 부분집합의 수 
-  * 집합의 원소가 n개일때, 공집합을 포함한 부분집합의 수는 2^n이다.   
-  * 이는 각 원소를 부분집합에 포함시키거나 포함시키지 않는 2가지 경우를 모든 원소에 적용한 경우의 수와 같다.   
-   
-기존에 내가 자주 사용하던 재귀 알고리즘이다.     
-
-* 입력된 숫자로 구성된 집합의 모든 부분 집합생성
+* 집합에 포함된 원소를 선택하는 것이다.      
+* 집합에 하위 개념이므로, 집합과 마찬가지로 순서는 상관없다.    
+* 다수의 중요 알고리즘들이 원소들의 그룹에서 최적의 부분 집합을 찾는 것이다.  
+* 부분집합의 수    
+  * 집합의 원소가 n개일때, 공집합을 포함한 부분집합의 수는 `2^n`이다.      
+  * 이는 각 원소를 부분집합에 포함시키거나 포함시키지 않는 2가지 경우를 모든 원소에 적용한 경우의 수와 같다.         
+            
+기존에 내가 자주 사용하던 재귀 알고리즘이다.         
+       
+* 입력된 숫자로 구성된 집합의 모든 부분 집합생성   
 * 재귀적 구현을 통해 생성하는 방법  
-
+   
 ```
 input[]		// 숫자 배열
 isSelected[]	// 부분집합에 포함/비포함의 형태로 재귀적 구현을 함    
@@ -137,4 +137,4 @@ public class SubSet2 {
     }
 }
 ```
-* 공집합은 제외했다.  
+* 공집합은 제외했다.    
