--- a/02 재귀.md
+++ b/02 재귀.md
@@ -1,16 +1,47 @@
 # 재귀    
-n개중 K개를 뽑는 조합의 경우의 수 계산을 재귀로 작성해보자    
-  
+재귀란 메서드 **자기 자신을 호출하는 것을 의미**한다.            
+자신의 메서드를 타고 가기 때문에, 로직은 동일하지만               
+메서드에 들어가는 **매개변수의 값이 변경되면서 로직을 수행**한다.     
+              
+여기서 중요한 점은 자기 자신을 호출하는 것과 매개변수의 값이다.                
+**재귀**를 진행하면 언젠가 **탈출해야하는 조건, 즉 기저조건이 필요하다.**              
+그리고 이러한 **기저조건은 변화되는 값, 매개변수를 이용해야한다.**          
+물론, 상황에 따라서 전역변수를 이용하는 경우도 많지만        
+우선 우리는 기저 조건을 이용해서 재귀를 탈출해야 한다.   
+      
+아래 3 단계는 일반적으로 재귀함수를 정의하는 방법이다.   
+   
 1. 메서드(함수)역할을 명확히 정의하라! (What)       
 2. 메서드가 기능을 수행하기 위해 필요한 매개체 값(매개변수-> 결정 요인)   
 3. 재귀의 끝 (기저조건)   
-
+     
+하지만, 필자의 경우 아래와 같은 프로세스를 따라 더 효율적인 방법을 발견했다.     
+    
 필자의 경우 :    
 1. 우선 알맞는 기저 조건을 만든다.  
-2. 예외 조건을 만든다.    
-3. 두 조건을 생각해서 파라미터를 만든다.    
-4. 이후에는 정상 동작이니, 분기에 따른 재귀함수를 정의한다.    
-4. 분기에 따른 재귀함수는 매개변수의 값을 조작하는 것을 의미한다.  
+2. 예외 조건을 만든다.     
+3. 두 조건을 생각해서 파라미터를 만든다.  
+4. 상황에 따라서, 나오는 값이 항상 일정하고 재귀로 여러번 방문한다면 메모이제이션을 쓴다.  
+5. 이후에는 정상 동작이니, 분기(반복문이나 조건문)에 따라 호출되는 재귀함수를 정의한다.         
+      
+이를 코드로 표현하면 아래와 같다.             
+```java
+public int go(int count, int n) {
+    if(count == n) return 1;                              // 기저 조건
+    if(count < 0 || count > n) return 0;                  // 예외 조건 
+    if(d[count] != -1) return d[count];                   // 메모이제이션 
+   
+    // 여기서부터는 정상 동작 
+   
+    d[count] = 0;                                         // 초기값   
+    for(어떤 조건){
+        d[count] = Math.max(d[count], go(count+1, n);           
+    }
+    return d[count];
+}
+```
+
+
 
 ## 피보나치
 
