--- a/02 재귀.md
+++ b/02 재귀.md
@@ -15,9 +15,8 @@
 2. 메서드가 기능을 수행하기 위해 필요한 매개체 값(매개변수-> 결정 요인)   
 3. 재귀의 끝 (기저조건)   
      
-하지만, 필자의 경우 아래와 같은 프로세스를 따라 더 효율적인 방법을 발견했다.     
-    
-필자의 경우 :    
+하지만, 필자의 경우 아래와 같은 프로세스를 따라 **더 효율적인 방법을 발견**했다.       
+      
 1. 우선 알맞는 기저 조건을 만든다.  
 2. 예외 조건을 만든다.     
 3. 두 조건을 생각해서 파라미터를 만든다.  
