--- a/02 재귀.md
+++ b/02 재귀.md
@@ -8,8 +8,9 @@
 그리고 이러한 **기저조건은 변화되는 값, 매개변수를 이용해야한다.**          
 물론, 상황에 따라서 전역변수를 이용하는 경우도 많지만        
 우선 우리는 기저 조건을 이용해서 재귀를 탈출해야 한다.   
-      
-아래 3 단계는 일반적으로 재귀함수를 정의하는 방법이다.   
+ 
+# 재귀 계획하기     
+아래 3 단계는 일반적으로 알려진 재귀함수를 정의하는 방법이다.   
    
 1. 메서드(함수)역할을 명확히 정의하라! (What)       
 2. 메서드가 기능을 수행하기 위해 필요한 매개체 값(매개변수-> 결정 요인)   
@@ -40,8 +41,35 @@ public int go(int count, int n) {
 }
 ```
 
+# 반복 VS 재귀   
+반복과 재귀는 그 형태가 매우 비슷하다.   
+실제로 DP를 풀때는 아래와 같은 2가지 방법이 있다.       
+  
+* 반복문을 사용하는 Bottom-up 방식     
+* 재귀를 사용하는 Top-down 방식   
+     
+하지만, 이 둘의 성능은 동일하다고 말을 할 수 없다.    
+재귀를 이용하면 스택을 새로 생성해야하기에 스택오버플로우가 발생할 수 있고,     
+반복문도 불필요한 반복문을 매번 탐색하는 경우도 있다.         
+그렇기에 우리는 해결할 문제를 고려해서 반복이나 재귀 방법을 선택해야한다.        
+            
+* 해결할 문제를 고려해서 반복이나 재귀의 방법을 선택             
+* **재귀**는 문제 해결을 위한 **알고리즘 설계가 간단하고 자연스럽다.**             
+* 특히, **Tree와 같은 추상 자료형의 알고리즘은 재귀적 구현이 간단하고 자연**스러운 경우가 많다.           
+* 일반적으로, **재귀적 알고리즘은 반복 알고리즘보다 더 많은 메모리와 연산을 필요로 한다.**      
+* 입력값 **n이 커질수록 재귀 알고리즘은 반복에 비해 비효율적일 수 있다.**       
+      
+||재귀|반복|
+|-|---|----|
+|종료|재귀 함수 호출이 종료되는 베이스 케이스|반복문의 종료 조건|
+|수행 시간|상대적 느림|빠름|
+|메모리 공간|많이 사용|적게 사용|
+|소스 코드 길이|짧고 간결|길다|
+|소스 코드 형태|선택 구조|반복 구조|
+|무한 반복 시|스택 오버플로우|cpu를 반복해서 점유|
 
 
+# 문제를 통해 알아보기   
 ## 피보나치
 
 ```c++
@@ -101,21 +129,6 @@ int fibonacci(int n){
   
 단, 이것은 개발자의 성향이며 자신에게 맞는 작업을 해주면 된다.     
 
-## 반복 VS 재귀   
-* 해결할 문제를 고려해서 반복이나 재귀의 방법을 선택     
-* 재귀는 문제 해결을 위한 알고리즘 설계가 간단하고 자연스럽다.   
-    * 추상 자료형의 알고리즘은 재귀적 구현이 간단하고 자연스러운 경우가 많다.(tree)    
-* 일반적으로, 재귀적 알고리즘은 반복 알고리즘보다 더 많은 메모리와 연산을 필요로 한다.   
-* 입력값 n이 커질수록 재귀 알고리즘은 반복에 비해 비효율적일 수 있다.   
-
-||재귀|반복|
-|-|---|----|
-|종료|재귀 함수 호출이 종료되는 베이스 케이스|반복문의 종료 조건|
-|수행 시간|상대적 느림|빠름|
-|메모리 공간|많이 사용|적게 사용|
-|소스 코드 길이|짧고 간결|길다|
-|소스 코드 형태|선택 구조|반복 구조|
-|무한 반복 시|스택 오버플로우|cpu를 반복해서 점유|
 
 ## 하노이 타워  
 
