--- a/02 재귀.md
+++ b/02 재귀.md
@@ -35,7 +35,9 @@ public int go(int count, int n) {
    
     d[count] = 0;                                         // 초기값   
     for(어떤 조건){
-        d[count] = Math.max(d[count], go(count+1, n);           
+        if(어떤조건){
+            d[count] = Math.max(d[count], go(count+1, n);          
+        }
     }
     return d[count];
 }
