--- a/02 재귀.md
+++ b/02 재귀.md
@@ -135,32 +135,77 @@ int fibonacci(int n){
 ## 하노이 타워  
 
 ```java
-import java.util.Scanner;
-
-public class Main {
-
-    public static final Scanner SCANNER = new Scanner(System.in);
-    public static int n;
-    public static int count=0;
-    public static StringBuilder stringBuilder = new StringBuilder();
-
-    public static void main(String[] args) {
-        n = SCANNER.nextInt();
-        hanoi(n,1,2,3);
-        System.out.println(count);
-        System.out.println(stringBuilder.toString());
-    }
-
-    public static void hanoi(int n, int start, int temp, int destination){
-        count++;
-        if(n == 1) {
-            stringBuilder.append(start+ " "+destination).append("\n");
-            return;
-        }
-        hanoi(n-1, start, destination, temp);   // n-1를 임시로 보내야지 일단. , 한 칸위 접시들은 알아서 돌겠지
-        stringBuilder.append(start+" "+destination).append("\n");   // 나를 최종으로 보냄(가장 큰놈)  
-        hanoi(n-1, temp, start, destination);   // 임시에 있는 n-1를 목적지로 보내야지 , 한 칸위 접시들은 알아서 돌겠지  
-    }
-
+/*
+	N : 원판의 개수
+	start : 출발지
+	mid : 옮기기 위해 이동해야 장소
+	to : 목적지
+*/
+ 
+void Hanoi(int N, int start, int mid, int to) {
+ 
+	// 이동할 원반의 수가 1개라면?
+	if (N == 1) {
+		print(start + " " + to + "\n");
+		return;
+	} 
+    
+	// STEP 1 : N-1개를 A에서 B로 이동
+	Hanoi(N - 1, start, to, mid);
+    
+	// STEP 2 : 1개를 A에서 C로 이동
+	print(start + " " + to + "\n");
+    
+	// STEP 3 : N-1개를 B에서 C로 이동
+	print(N - 1, mid, start, to);
+	
 }
 ```
+재귀함수의 끝판왕이라 생각하면 된다.       
+    
+로직에 대해서는 설명을 하지 않고 가장 중요한 말을 하려고 한다.      
+재귀 함수는 **Flat** 하게 생각해야 한다. 즉, 쉽게 생각해야 한다.     
+           
+재귀 함수는 여러 경로(경우의 수)로 나눠진다.                
+그렇기 때문에 재귀를 일일히 따라가서 검사를 한다는 것은 매우 어렵다.                 
+**Flat** 하게 생각해야 한다는 것은 딱 현재 위치의 로직만 따라간다는 것이다.       
+   
+하노이 타워를 예시로 하겠다.    
+우선 기저 조건이 존재하고 `n == 1` 이면 알아서 탈출 될 것이다.   
+
+  
+하노이 탑에서 맨 위에 있는 n번째 원판은 아무런 방해 없이 목적지로 이동해야 한다.         
+그렇다면 n-1 번째 원판들은 목적지가 아닌 임시 막대기로 이동해 있어야 한다.         
+이후, n번째 원판이 목적지에 이동했으면, n-1번재 원판들은 그제서야 목적지로 이동시켜야 한다.     
+
+이를 코드로 구현해보자    
+```java
+Hanoi(N - 1, start, to, mid);
+```  
+* n-1 번째 원판들을 중간으로 이동시킨다.  
+
+```java
+print(start + " " + to + "\n");
+```
+* n번째 원판을 목적지로 이동시킨다.  
+
+```
+print(N - 1, mid, start, to);
+```   
+* 목적지에 있는 `n-1` 원판을 목적지로 이동시킨다.   
+
+이렇듯 재귀는 `어차피 알아서 돌겠지` 라는 마인드를 가지는 것이 중요하다.   
+그리고 도중 문제가 생기면, 로직을 따라가기 보다는    
+`기저조건`,` 예외조건`, `메모이제이션`, `호출조건`, `매개변수위치`등을 확인하는 것이 좋다.   
+다시 한번 말하지만 `알아서 돌겠지`라는 **Flat 한 생각이 필요하다**   
+      
+하지만, 살면서 딱 한번? 정도는 따라가는 경험도 나쁘지는 않다. ㅎㅎ    
+
+
+
+
+
+
+
+
+
