--- a/03 순열.md
+++ b/03 순열.md
@@ -1,40 +1,37 @@
 # 순열 
-서로 다른 것들 중 몇개를 뽑아서 한 줄로 나열하는 것  
-서로 다른 n개중 r개를 택하는 순열은 아래아 같다.  
-```
-nPr   
-```
-nPr을 공식으로 나타낸다면?   
-```
+> nPr      
+   
+순열이란 나열된 배열중 몇 개의 수를 뽑지만, 그 순서도에 따라 의미가 다르다.   
+   
+예시로 들자면, 123이라는 숫자가 있다.   
+
+* 1, 2, 3
+* 1, 3, 2
+* 2, 1, 3
+* 2, 3, 1
+* 3, 1, 2
+* 3, 2, 1
+   
+위 수들은 중복해서 조합되지만, 그 순서가 다르다.    
+그렇기 때문에 서로 다른 경우의 수로 취급을 하고 이러한 방법을 순열이라 말한다.   
+   
+## 순열 계획하기   
+우선 순열에 대한 공식(점화식)을 한번 살펴보자      
+```java
 nPr = n * (n-1) *  ... * (n-r+1)
 ```
-예를 들어 3P2면 `(3 * ((3-2)+1))`이다.     
-즉, r번 곱해지는 것이다.  
-    
-```   
-nPr = n * (n-1) *  ... * (n-n+1)  
-```
-만약, r이 n이랑 같다면? `n!` 팩토리얼이다.  
-   
-
-그럼 25명 반에서 2명 뽑는다면?  
-25 * 24 -> 600      
-    
-쉽게 푸는 방법으로     
-25부터 r개만큼의 카운트 만큼 1개씩 내려가면서 곱한다.        
-`25P2도 -> 25 * 24`로 계산하면 된다.        
-     
-	  
-## 순열이랑 조합이 헷갈린다면?     
-나열된 순서가 다른데 의미가 있다면? 순열      
-나열된 순서가 다른데 의미가 없다면? 조합           
-    
-* 다수의 알고리즘 문제들은 순서화된 요소들의 집합에서 최선의 방법을 찾는 것과 관련 있다. (TSP-외판원 순회)        
-    
-* N개의 요소들에 대해서 n! 개의 순열들이 존재한다.  
-  * 12! = 479.001.600     
-  * 10까지가 순열을 사용할 수 있는 제한의 최대 범위라고 생각하자           
+순열은 `n` 부터 시작해서 `r`의 갯수만큼 **내려가면서 곱**해주는 형식이다.       
+팩토리얼과 비슷하지만, 팩토리얼처럼 곱셈이 내려가지만 `r`만큼만 내려간다 생각하면 된다.    
   
+예를 들어 `3P2`라고 가정한다면 `(3 * 2)`의 값이 나온다.   
+실생활로 예를 들어 그럼 `25`명이 있는 반에서 `4`명 뽑는다면?  
+`25 * 24 * 23 * 22`의 결과값으로 `303,600` 이라는 값이 나온다.            
+    
+```java   
+nPr = n * (n-1) *  ... * (n-n+1)  
+```  
+그렇기 때문에 만약, r이 n이랑 같다면 `n!` 팩토리얼이라는 값이 나온다.      
+       
 ## 순열을 생성하는 방법
 
 **Case**
@@ -96,3 +93,13 @@ public class PermutationTest {
 **c++의 NextPermutation() Java에서 구현해보기**   
 ```java
 ```
+
+## 순열이랑 조합이 헷갈린다면?     
+나열된 순서가 다른데 의미가 있다면? 순열      
+나열된 순서가 다른데 의미가 없다면? 조합           
+    
+* 다수의 알고리즘 문제들은 순서화된 요소들의 집합에서 최선의 방법을 찾는 것과 관련 있다. (TSP-외판원 순회)        
+    
+* N개의 요소들에 대해서 n! 개의 순열들이 존재한다.  
+  * 12! = 479.001.600     
+  * 10까지가 순열을 사용할 수 있는 제한의 최대 범위라고 생각하자           
