--- a/03 순열.md
+++ b/03 순열.md
@@ -15,7 +15,7 @@
 위 수들은 중복해서 조합되지만, 그 순서가 다르다.    
 그렇기 때문에 서로 다른 경우의 수로 취급을 하고 이러한 방법을 순열이라 말한다.   
    
-## 순열 계획하기   
+# 순열 경우의 수 구하기     
 우선 순열에 대한 공식(점화식)을 한번 살펴보자      
 ```java
 nPr = n * (n-1) *  ... * (n-r+1)
@@ -31,10 +31,18 @@ nPr = n * (n-1) *  ... * (n-r+1)
 nPr = n * (n-1) *  ... * (n-n+1)  
 ```  
 그렇기 때문에 만약, r이 n이랑 같다면 `n!` 팩토리얼이라는 값이 나온다.      
-       
-## 순열을 생성하는 방법
-
-**Case**
+              
+# 순열이 이루어진 배열의 값 구하기       
+사실, 대부분의 순열 문제는 우선 이 순열이 이루어진 배열의 값을 이용해야한다.    
+다시 한번 말한다. **순열이 이루어진 배열을 활용해서 답을 도출해야한다.**      
+순열이 이루어진 배열을 구했다해서 바로 답이 나오지는 않는다.       
+그렇기 때문에 우리는 이 준비단계? 부터 완벽히 마스터해야 문제를 풀 수 있는 수준이 된다.     
+  
+배열을 만드는 방식은 여러가지가 존재한다.  
+그 중에서 반복문을 사용해서 간단히 만들 수 있는 방법에 대해서 먼저 알아보도록 한다.   
+  
+## 재귀를 이용한 순열 배열 구하기  
+**케이스**   
 ```java
 numbers[] : 순열 저장 배열 
 isSelected[] : 인덱스에 해당하는 숫자가 사용 중인지 저장하는 배열  
@@ -90,7 +98,7 @@ public class PermutationTest {
 }
 ```
 
-**c++의 NextPermutation() Java에서 구현해보기**   
+## c++의 nextPermutation() Java에서 구현해보기     
 ```java
 ```
 
