--- a/03 순열.md
+++ b/03 순열.md
@@ -42,6 +42,7 @@ nPr = n * (n-1) *  ... * (n-n+1)
 그 중에서 반복문을 사용해서 간단히 만들 수 있는 방법에 대해서 먼저 알아보도록 한다.   
   
 ## 재귀를 이용한 순열 배열 구하기  
+### 중복 없는 순열
 **케이스**   
 ```java
 numbers[] : 순열 저장 배열 
@@ -96,7 +97,15 @@ public class PermutationTest {
 		}
 	}
 }
-```
+```  
+순열은 조합이 아니기에 순서에 따라 다른 값이 들어올 수 있다.       
+즉, 3이 가장 첫번째 인덱스로 들어올 수 있다는 것이다.            
+그렇기 때문에, 반복문을 이용할 때, 처음부터 끝까지 탐색을 계속 진행해야 한다.        
+이 중에, `이미 선택한 적이 있다면?`이라는 조건을 붙여넣어서 중복을 피하도록 하면된다.  
+
+### 중복있는 순열
+
+
 
 ## c++의 nextPermutation() Java에서 구현해보기     
 ```java
