--- a/03 순열.md
+++ b/03 순열.md
@@ -105,12 +105,83 @@ public class PermutationTest {
 
 ### 중복있는 순열
 
-
-
-## c++의 nextPermutation() Java에서 구현해보기     
 ```java
+package com.ssafy.exhaustive;
+
+import java.util.Arrays;
+
+public class PermutationTest {
+	static int[] numbers;
+	static int N =4;
+	
+	
+	public static void main(String[] args) {
+		numbers = new int[N];
+		permutation(0);		
+	}
+	
+	static void permutation(int cnt) {
+		if(cnt == N) {
+			System.out.println(Arrays.toString(numbers));
+		}
+		
+		for(int i=1; i <= N; i++) {
+			numbers[cnt] = i; 
+			permutation(cnt+1);
+		}
+	}
+}
+```   
+중복이 없는 순열은 앞선 중복이 있는 순열보다 간단하다.          
+중복 조건을 검사하는 배열과 로직을 전부 제거하면 된다.                  
+이해가 어렵다면 로직을 한 번 따라가보기를 바란다.              
+     
+Flat 하게 생각하자면,      
+첫번째 인덱스의 값은 1부터n까지 바뀐다.    
+2번재 인덱스도 마찬가지로 1부터n까지 바뀐다.    
+3번재, 4번째... n번째도 마찬가지이다.       
+   
+## c++의 nextPermutation() Java에서 구현해보기     
+재귀를 이용한 방법 말고도, 반복문을 이용해서 순열을 구할 수 있다.
+이 경우, 주로 `do-while` 구문과 함께 이용한다.          
+       
+재귀 같은 경우는 `기저 조건`일 때부터 이제 값을 구하기 위한 로직을 처리하지만,     
+`nextPermutation()`같은 경우는 `do{}`에서 값을 구하기 위한 로직을 처리한다.     
+    
+```java
+private static boolean nextPermutation(int[] list) {
+	int i = list.length - 1;
+	int j = list.length - 1;
+	
+	/** 1. 꼭대기 찾기 **/
+	while(i > 0 && list[i-1] >= list[i]) --i;
+	if(i <= 0) return false;	// 꼭대기가 0번째 인덱스라면 마지막순열
+			
+        /** 2. j값 찾기 **/
+	while(list[i-1] > list[j]) --j;
+	
+	/** 3. swap 하기 **/
+	int tmp = list[i - 1];
+	list[i - 1] = list[j];
+	list[j] = tmp;
+	
+    	/** 4. 순서 정해주기 **/
+	j = list.length - 1;
+	for(; i < j; ++i, --j) {
+		swap(i,j);
+	}
+	return true;
+}
 ```
 
+## 정리
+모든 순열의 시간복잡도는 O(n!)를 따르고있다.       
+시간복잡도가 확실해서 그런지 순열문제는 크게 두가지 부류로 나눌 수있다.      
+단순히 순열만을 구해 문제를 풀때는 비교적 실행시간이 빠른 next_permutation을 이용한 풀이가 좋다.     
+반대로 순열을 구하는 도중에 가지치기가 필요하다던지 추가적인 조건이 들어간다면 방문처리를 이용한 순열을 이용해보자.    
+       
+[참고](https://velog.io/@junhok82/Java%EB%A1%9C-%EC%88%9C%EC%97%B4Permutation-%EA%B5%AC%ED%98%84%ED%95%98%EA%B8%B0)    
+        
 ## 순열이랑 조합이 헷갈린다면?     
 나열된 순서가 다른데 의미가 있다면? 순열      
 나열된 순서가 다른데 의미가 없다면? 조합           
