--- a/03 순열.md
+++ b/03 순열.md
@@ -173,6 +173,26 @@ private static boolean nextPermutation(int[] list) {
 	return true;
 }
 ```
+**해석**  
+1. `i`와 `j`는 마지막 인덱스부터 시작한다.   
+2. `i`는 자기 **자신보다 작은 수가 나올 때까지 왼쪽으로 이동**한다.   
+3. 만약 자기자신보다 작은 수가 없다면, 즉 현재 배열상태가 내림차순이라면 종료한다.   
+4. `j`는 **`i-1`보다 큰 수가 나올 때 까지 j를 왼쪽으로 이동**한다.            
+5. 이제 swap을 한건데 중요한점은 i가 아닌 `i-1`을 swap 한다.          
+6. 이후 swap된 값 이후의 값들도 swap을 진행해서 값을 정렬시켜준다.         
+7. 중간 구역은 내림차순으로 정렬 되었을테니 이를 오름차순으로 바꾸기 위해서 swap을 하는 것이다.     
+  
+**43521 기준으로 예시를 들어보면 아래와 같다.**       
+      
+* i는 5에서 멈춤 (인덱스 3)    
+* j는 5에서 멈춤 (3 > 5, 인덱스 3)    
+* i-1을 스왑하므로 3이랑 5 스왑    
+* 45321 인데 오름차순으로 정렬해야함    
+* 순열의 특성상, swap 이후의 값들은 이미 내림차순으로 정렬됨  
+* 버블정렬을 이용하면 오름차순은 내림차순으로 바뀐다는 특성을 이용함     
+* 45123이 된다.        
+   
+
 
 ## 정리
 모든 순열의 시간복잡도는 O(n!)를 따르고있다.       
