--- a/03 순열.md
+++ b/03 순열.md
@@ -165,7 +165,7 @@ private static boolean nextPermutation(int[] list) {
 	list[i - 1] = list[j];
 	list[j] = tmp;
 	
-    	/** 4. 순서 정해주기 **/
+    	/** 4. 이후 숫자들을 오름차순으로 바꾸기 **/
 	j = list.length - 1;
 	for(; i < j; ++i, --j) {
 		swap(i,j);
@@ -189,7 +189,7 @@ private static boolean nextPermutation(int[] list) {
 * i-1을 스왑하므로 3이랑 5 스왑    
 * 45321 인데 오름차순으로 정렬해야함    
 * 순열의 특성상, swap 이후의 값들은 이미 내림차순으로 정렬됨  
-* 버블정렬을 이용하면 오름차순은 내림차순으로 바뀐다는 특성을 이용함     
+* 버블정렬을 이용하면 내림차순은 오름차순으로 바뀐다는 특성을 이용함     
 * 45123이 된다.        
    
 
