--- a/03 순열.md
+++ b/03 순열.md
@@ -50,6 +50,7 @@ isSelected[] : 인덱스에 해당하는 숫자가 사용 중인지 저장하는
 perm(cnt) // cnt : 현재까지 뽑은 순열 수의 개수  
     if cnt == 3
         순열 생성 완료 
+	return;
     else
         for i from 1 to 3
             if isSelected[i] == true -> continue;
@@ -80,12 +81,12 @@ public class PermutationTest {
 		numbers = new int[N];
 		isSelected = new boolean[N+1];
 		permutation(0);
-		
 	}
 	
 	static void permutation(int cnt) {
 		if(cnt == N) {
 			System.out.println(Arrays.toString(numbers));
+			return;
 		}
 		
 		for(int i=1; i <= N; i++) {
@@ -123,6 +124,7 @@ public class PermutationTest {
 	static void permutation(int cnt) {
 		if(cnt == N) {
 			System.out.println(Arrays.toString(numbers));
+			return;
 		}
 		
 		for(int i=1; i <= N; i++) {
@@ -192,7 +194,10 @@ private static boolean nextPermutation(int[] list) {
 * 버블정렬을 이용하면 내림차순은 오름차순으로 바뀐다는 특성을 이용함     
 * 45123이 된다.        
    
+## 반복문 없이 재귀만 사용해서 중복 없는 순열 구하기     
+```java
 
+```
 
 ## 정리
 모든 순열의 시간복잡도는 O(n!)를 따르고있다.       
