--- a/03 순열.md
+++ b/03 순열.md
@@ -195,6 +195,9 @@ private static boolean nextPermutation(int[] list) {
 * 45123이 된다.        
    
 ## 반복문 없이 재귀만 사용해서 중복 없는 순열 구하기     
+필자가 가장 많이 사용하는 방법이다.   
+이 같은 방법은 주로, **`사용하는` 경우**, **`사용하지 않는` 경우**로 나눠질 때 사용한다.    
+
 ```java
 
 ```
