--- a/03 순열.md
+++ b/03 순열.md
@@ -219,3 +219,7 @@ private static boolean nextPermutation(int[] list) {
 * N개의 요소들에 대해서 n! 개의 순열들이 존재한다.  
   * 12! = 479.001.600     
   * 10까지가 순열을 사용할 수 있는 제한의 최대 범위라고 생각하자           
+
+# 문제 
+## 기초 
+[1. N과M](https://www.acmicpc.net/problem/15649)
