--- a/04 조합.md
+++ b/04 조합.md
@@ -1,6 +1,6 @@
 # 조합  
-조합은 브루트포스의 일종으로 주어진 데이터에 대한 **집합**이다.        
-단, 알고리즘에서 부분 집합과는 조금 다른 형태로 취급하니,               
+조합은 브루트포스의 일종으로 **주어진 데이터에 대한 집합**이다.              
+단, 알고리즘에서는 집합과 부분 집합에 대해서 조금의 차이를 둔다. 조금 다른 형태로 취급하니,               
 몇 개를 뽑을지에 대한 **고정된 값**이 주어지고 **이를 채우는 집합**이라 생각하자        
      
 즉, `nCr`이 주어지면, n개중 r개를 뽑는 경우의 수/집합을 구하는 것이다.    
