--- a/06 그래프.md
+++ b/06 그래프.md
@@ -29,22 +29,18 @@
 * A -> C -> E -> B -> A
 * A -> C -> D -> E -> B-> A
 
-```
-이건 왠지 다이나믹같이 한단계 전이 A와 연결된 곳 까지만 가면 될 것 같은데?   
-```
-
-## 단순 경로와 단순 사이클  
+### 단순 경로와 단순 사이클  
   
-* 경로/사이클에서 같은 정점을 두 번 이상 방문하지 않는 경로/사이클  
-* 특별한 말이 없으면, 일반적으로 사용하는 경로와 사이클은 단순 경로/사이클을 말한다.
+* 경로/사이클에서 같은 정점을 두 번 이상 방문하지 않는 경로/사이클     
+* 특별한 말이 없으면, 일반적으로 사용하는 경로와 사이클은 단순 경로/사이클이라고 말한다.   
 
 ## 방향 있는 그래프  
-
-* A -> C 와 같이 간선에 방향이 있다.    
-* A -> C 는 있지만, C -> A는 없다.        
-       
+  
+* A -> C 와 같이 간선에 방향이 있다.      
+* **`A -> C` 는 있지만,** **`C -> A`는 없다.**          
+         
 방향이 없는 그래프도 존재하는데 이를 양방향 그래프라고도 한다.        
-나중에 그래프를 저장하는 작업이 필요한데 이때 양방향 그래프를 방향이 있는 그래프로 전환해서 저장해야 한다.      
+나중에 그래프를 저장하는 작업이 필요한데 이때 양방향 그래프를 방향이 있는 그래프로 전환해서 저장해야 한다.        
    
 
 ## 간선 여러개   
