--- a/06 그래프.md
+++ b/06 그래프.md
@@ -9,32 +9,31 @@
 * **Noed :** 정점, 노드, 목적지         
 * **Edge :** 간선, 도로, 거리, 관계             
 * **Degree :** 노드에서 간선을 가진 수 중 가장 큰 값  
-           
-## 경로   
-경로가 의미하는 것은 **하나의 정점에서 다른 정점까지 가는 간선의 연속**을 의미한다.          
-간선의 연속이라 한 이유는 계속 길이 있어야 하기 때문이다.           
-    
+             
+### 경로   
+경로가 의미하는 것은 **하나의 정점에서 다른 정점까지 가는 간선의 연속**을 의미한다.              
 즉, 출발지에서 도착지까지 갈 수 있는 **모든 경우의수를 경로라고 한다.**    
-      
+     
 **정점 A에서 B로 가는 경로**       
 * A -> C -> D -> E -> B  
 * A -> B 
 * A -> C -> B 
 * A -> C -> B -> E 
         
-## 싸이클 
+### 싸이클 
 
 * 정점 A에서 다시 A로 돌아오는 경로  
 * A -> C -> B -> A 
 * A -> C -> E -> B -> A
 * A -> C -> D -> E -> B-> A
-
-### 단순 경로와 단순 사이클  
+  
+**단순 경로와 단순 사이클**    
   
 * 경로/사이클에서 같은 정점을 두 번 이상 방문하지 않는 경로/사이클     
 * 특별한 말이 없으면, 일반적으로 사용하는 경로와 사이클은 단순 경로/사이클이라고 말한다.   
 
-## 방향 있는 그래프  
+
+# 방향 있는 그래프  
   
 * A -> C 와 같이 간선에 방향이 있다.      
 * **`A -> C` 는 있지만,** **`C -> A`는 없다.**          
