--- a/03 순열.md
+++ b/03 순열.md
@@ -202,6 +202,53 @@ private static boolean nextPermutation(int[] list) {
 
 ```
 
+
+## 비트 마스킹을 통한 순열 생성
+```
+nPn
+```
+**기존 방식**
+```java
+numbers[] : 순열 저장 배열 
+isSelected[] : 인덱스에 해당하는 숫자가 사용 중인지 저장하는 배열  
+perm(cnt) // cnt : 현재까지 뽑은 순열 수의 개수  
+    if cnt == 3
+        순열 생성 완료 
+	return;
+    else
+        for i from 1 to 3
+            if isSelected[i] == true -> continue;
+            numbers[cnt] <- i
+            isSelected[i] = true
+            perm(cnt+1)
+            isSelected[i] = false
+        end_for
+end perm	
+```
+   
+**비트마스킹 방식**
+```
+input[] 순열 저장
+numbers[] 순열 저장 배열  
+
+perm(cnt, flag) // cnt : 현재까지 뽑은 순열 원소의 개수, flag : 선택된 원소에 대한 비트정보를 표현하는 정수 -> 즉 현재 왔던 경로들에 대한 비트를 가짐     
+if cnt == n
+    순열 생성 완료  
+else
+    for i form 0 to N-1
+        if(flag & 1 << i) != 0 then continue; // 1이 있으면 이미 도착했다는 것이다.   
+        numbers[cnt] <- input[i]
+        perm(cnt+1, flag | 1 << i); // |을 하면 그만큼을 더한 것이다.  
+    end for 
+end perm    
+```
+* 비트를 이용해 중복체크, 방문했다는 처리도 함
+* 배열을 안 만들어도 되니까, 인덱스 찾는 연산과 메모리적으로 효율이 좋아졌다.    
+
+
+
+
+
 ## 정리
 모든 순열의 시간복잡도는 O(n!)를 따르고있다.       
 시간복잡도가 확실해서 그런지 순열문제는 크게 두가지 부류로 나눌 수있다.      
@@ -209,7 +256,8 @@ private static boolean nextPermutation(int[] list) {
 반대로 순열을 구하는 도중에 가지치기가 필요하다던지 추가적인 조건이 들어간다면 방문처리를 이용한 순열을 이용해보자.    
        
 [참고](https://velog.io/@junhok82/Java%EB%A1%9C-%EC%88%9C%EC%97%B4Permutation-%EA%B5%AC%ED%98%84%ED%95%98%EA%B8%B0)    
-        
+
+
 ## 순열이랑 조합이 헷갈린다면?     
 나열된 순서가 다른데 의미가 있다면? 순열      
 나열된 순서가 다른데 의미가 없다면? 조합           
@@ -219,6 +267,7 @@ private static boolean nextPermutation(int[] list) {
 * N개의 요소들에 대해서 n! 개의 순열들이 존재한다.  
   * 12! = 479.001.600     
   * 10까지가 순열을 사용할 수 있는 제한의 최대 범위라고 생각하자           
+
 
 # 문제 
 ## 기초 
