--- a/03 순열.md
+++ b/03 순열.md
@@ -393,7 +393,41 @@ ____
 32개의 flag를 만드는 것이다.        
 `boolean [] flag`  == `int flag=0` 와 똑같다.     
 
+```java
+import java.util.*;
 
+
+class PermutationTest {
+    static int[] numbers;
+    static int[] input;
+    static int N;
+    static final Scanner scanner = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        N = scanner.nextInt();
+        numbers = new int[N];
+        input = new int[N];
+        for(int i=0; i < N; i++){
+            input[i] = i+1;
+        }
+        permutation(0, 0);
+    }
+
+    static void permutation(int cnt, int flag) {
+        if(cnt == N) {
+            System.out.println(Arrays.toString(numbers));
+            return;
+        }
+
+        for(int i=0; i < N; i++) {
+            if((flag & 1 << i) != 0) continue;
+            numbers[cnt] = input[i];
+            permutation(cnt+1, flag | 1 << i);
+        }
+    }
+}
+
+```
 
 
 
