--- a/03 순열.md
+++ b/03 순열.md
@@ -151,29 +151,57 @@ Flat 하게 생각하자면,
 `nextPermutation()`같은 경우는 `do{}`에서 값을 구하기 위한 로직을 처리한다.     
     
 ```java
-private static boolean nextPermutation(int[] list) {
-	int i = list.length - 1;
-	int j = list.length - 1;
-	
-	/** 1. 꼭대기 찾기 **/
-	while(i > 0 && list[i-1] >= list[i]) --i;
-	if(i <= 0) return false;	// 꼭대기가 0번째 인덱스라면 마지막순열
-			
+import java.util.*;
+
+class PermutationTest {
+    static int[] list;
+    static int N;
+    static final Scanner scanner = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        N = scanner.nextInt();
+        list = new int[N];
+        for(int i=0; i < N; i++){
+            list[i] = i+1;
+        }
+        do {
+            System.out.println(Arrays.toString(list));
+        } while (nextPermutation());
+    }
+
+    private static boolean nextPermutation() {
+        int i = list.length - 1;
+        int j = list.length - 1;
+
+        /** 1. 꼭대기 찾기 **/
+        while(i > 0 && list[i-1] >= list[i]) --i;		// 같거나 큰값이 있다면 계속해서 큰 값으로 올라간다.
+        if(i <= 0) return false;	// 꼭대기가 0번째 인덱스라면 마지막순열
+
         /** 2. j값 찾기 **/
-	while(list[i-1] > list[j]) --j;
-	
-	/** 3. swap 하기 **/
-	int tmp = list[i - 1];
-	list[i - 1] = list[j];
-	list[j] = tmp;
-	
-    	/** 4. 이후 숫자들을 오름차순으로 바꾸기 **/
-	j = list.length - 1;
-	for(; i < j; ++i, --j) {
-		swap(i,j);
-	}
-	return true;
+        while(list[i-1] > list[j]) --j;				// i-1보다 한 단계 큰수를 찾아서 찾아서 교환하자
+        // i-1이 2이면 3 찾는 것이다.
+        // 순열의 특성상 내림차순이기에 뒤에서부터 찾아도 된다.
+
+        /** 3. swap 하기 **/
+        int tmp = list[i - 1];
+        list[i - 1] = list[j];
+        list[j] = tmp;
+
+        /** 4. 이후 숫자들을 오름차순으로 바꾸기 **/
+        j = list.length - 1;
+        for(; i < j; ++i, --j) {
+            swap(i,j);
+        }
+        return true;
+    }
+
+    public static void swap(int i, int j){
+        int temp = list[i];
+        list[i] = list[j];
+        list[j] = temp;
+    }
 }
+
 ```
 **해석**  
 1. `i`와 `j`는 마지막 인덱스부터 시작한다.   
@@ -191,8 +219,16 @@ private static boolean nextPermutation(int[] list) {
 * i-1을 스왑하므로 1이랑 2 스왑    
 * 32541 인데 오름차순으로 정렬해야함    
 * 순열의 특성상, swap 이후의 값들은 이미 내림차순으로 정렬됨  
-* 버블정렬을 이용하면 내림차순은 오름차순으로 바뀐다는 특성을 이용함     
+* 5432라 가정한다면 -> 2랑 5랑 바꾸기/ 3이랑 4를 바꾸기 -> 2345가 된다.   
 * 32145가 된다.           
+         
+SSAFY 버전       
+1. 뒤쪽부터 탐색하여 교환위치 찾기(i-1)(i는 꼭대기) 왼쪽수가 자기보다 작은 수 찾기   
+2. 뒤쪽부터 탐색하여 교환위치와 교환할 큰 값 위치 찾기(J)   
+3. 두 위치 교환  
+4. 꼳대기위치부터 맨 뒤까지 오름차순 정렬 
+5. 꼭대기라는 것은 범위중에서 가장 큰 값이라는 것이니까 끝포인트를 서로 교환함     
+
       
 ## 반복문 없이 재귀만 사용해서 중복 없는 순열 구하기     
 필자가 가장 많이 사용하는 방법이다.   
