--- a/03 순열.md
+++ b/03 순열.md
@@ -153,6 +153,7 @@ Flat 하게 생각하자면,
 ```java
 import java.util.*;
 
+
 class PermutationTest {
     static int[] list;
     static int N;
@@ -178,20 +179,19 @@ class PermutationTest {
         if(i <= 0) return false;	// 꼭대기가 0번째 인덱스라면 마지막순열
 
         /** 2. j값 찾기 **/
-        while(list[i-1] > list[j]) --j;				// i-1보다 한 단계 큰수를 찾아서 찾아서 교환하자
+        while(list[i-1] >= list[j]) --j;				// i-1보다 한 단계 큰수를 찾아서 찾아서 교환하자
         // i-1이 2이면 3 찾는 것이다.
         // 순열의 특성상 내림차순이기에 뒤에서부터 찾아도 된다.
 
         /** 3. swap 하기 **/
-        int tmp = list[i - 1];
-        list[i - 1] = list[j];
-        list[j] = tmp;
+        swap(i-1, j);
 
         /** 4. 이후 숫자들을 오름차순으로 바꾸기 **/
-        j = list.length - 1;
-        for(; i < j; ++i, --j) {
-            swap(i,j);
+        int k = list.length - 1;
+        while ( i < k){
+            swap(i++,k--);
         }
+        
         return true;
     }
 
@@ -201,8 +201,14 @@ class PermutationTest {
         list[j] = temp;
     }
 }
-
 ```
+참고로, 조합에서도 사용이 가능하다.       
+
+순열재귀 + 구현
+조합 + 구현
+   
+시뮬레이션 문제가 많다.   
+
 **해석**  
 1. `i`와 `j`는 마지막 인덱스부터 시작한다.   
 2. `i`는 자기 **자신보다 작은 수가 나올 때까지 왼쪽으로 이동**한다.   
