--- a/03 순열.md
+++ b/03 순열.md
@@ -173,29 +173,29 @@ class PermutationTest {
     private static boolean nextPermutation() {
         int i = list.length - 1;
         int j = list.length - 1;
+	int k = list.length - 1;
+        
+	while(i > 0 && list[i-1] >= list[i]) --i;			// 같거나 큰값이 있다면 계속해서 큰 값으로 올라간다.
+        if(i <= 0) return false;					// 꼭대기가 0번째 인덱스라면 마지막순열을 의미하므로 종료시킨다.   
 
-        /** 1. 꼭대기 찾기 **/
-        while(i > 0 && list[i-1] >= list[i]) --i;		// 같거나 큰값이 있다면 계속해서 큰 값으로 올라간다.
-        if(i <= 0) return false;	// 꼭대기가 0번째 인덱스라면 마지막순열
-
-        /** 2. j값 찾기 **/
-        while(list[i-1] >= list[j]) --j;				// i-1보다 한 단계 큰수를 찾아서 찾아서 교환하자
-        // i-1이 2이면 3 찾는 것이다.
-        // 순열의 특성상 내림차순이기에 뒤에서부터 찾아도 된다.
-
-        /** 3. swap 하기 **/
-        swap(i-1, j);
-
-        /** 4. 이후 숫자들을 오름차순으로 바꾸기 **/
-        int k = list.length - 1;
-        while ( i < k){
-            swap(i++,k--);
+        while(list[i-1] >= list[j]) --j;				// i-1보다 한 단계 큰수를 찾아서 찾아서 교환하자    
+          								// i-1이 2이면 3 찾는 것이다.     
+        								// 앞서 i는 자신보다 큰수만 이동했기 때문에 i 이전 값은      
+									// 내림차순으로 정렬된 상태임을 알 수 있다.      
+									// 그렇기에 바로 i 보다 큰 값이 나오면 이 값을 바궈주는 것이다.    
+        
+        swap(i-1, j);							// i-1과 한 칸 큰 값을 바꾼다.          
+					
+        
+        								   
+        while (i < k){							// i부터 n까지의 숫자들을 이제 swap한다 -> 내림차순이기 때문에 매칭되는 수끼리 바꾼다.
+            swap(i++,k--);						// swap 진행
         }
         
-        return true;
+        return true;							// 작업이 완료되었으므로 true 리턴    
     }
 
-    public static void swap(int i, int j){
+    public static void swap(int i, int j){				// swap 작업  
         int temp = list[i];
         list[i] = list[j];
         list[j] = temp;
