--- a/04 조합.md
+++ b/04 조합.md
@@ -8,7 +8,7 @@
 ## 조합을 구하는 공식   
 **점화식을 통한 조합 만들기**
 ```
-nCr = n-1Cr-1 + n-1Cr
+nCr = ((n-1)C(r-1)) + ((n-1)C(r))
 nC0 = 1
 ```
 조합을 구하는 공식을 해석해보면 아래와 같다.  
