--- a/04 조합.md
+++ b/04 조합.md
@@ -57,7 +57,20 @@ public class Combination {
            
 원래는 배열에 넣었던 값도, 재귀를 끝나면 원래대로 초기화를 시켜줘야 하지만       
 어차피 재귀를 돔면서 값을 덮어주기 때문에 단순하게 처음에 넣는 작업만한다.     
-      
+
+**반복문만을 이용한 조합 방법**   
+```java
+4C3  
+
+for i from 1 to 4
+    for j from i+1 to 4			// i보다 +1이니까 중복 x 
+        for k from j+1 t0 4		// j보다 +1이니까 중복 x 
+	    print i j k
+	end for
+    end for
+end for
+```
+
 **반복문과 재귀를 함께 이용한 조합 방법**        
 ```java
 nCr -> n개의 원소 중 r개 원소를 갖는 조합 생성  
