--- a/04 조합.md
+++ b/04 조합.md
@@ -120,3 +120,31 @@ public class CombinationTest {
 반복문과 재귀를 이용한 방법으로 풀었다.                        
 이런식으로 코드를 작성할 경우, `combination(cnt, i+1);` 를 생략해도 된다.               
     
+**넥스트퍼뮤테이션을 이용해서 조합만들기**    
+
+* n만큼의 배열을 만드는데 r개만큼의 1을 넣는다.      
+* 해당 배열을 np로 1의값과 0의 값의 위치를 계속 변형시켜준다.   
+* 해당 부분에 있는 배열만 출력하면 된다.  
+
+4C2
+
+|1|2|3|4|
+|-|-|-|-|
+
+|0|0|1|1|
+|-|-|-|-|
+
+|0|1|0|1|
+|-|-|-|-|
+
+|0|1|1|0|
+|-|-|-|-|
+
+|1|0|0|1|
+|-|-|-|-|
+
+|1|0|1|0|
+|-|-|-|-|
+
+|1|1|0|0|
+|-|-|-|-|
