--- a/04 조합.md
+++ b/04 조합.md
@@ -163,4 +163,66 @@ public class CombinationTest {
 
 이렇게 사용하면 r번을 타고들어가는게 아니라     
 np 한번당 조합이 하나 생기는 것이다.         
-  
+
+```java
+import java.util.*;
+
+class PermutationTest {
+    static int[] list;
+    static int[] input;
+    static int N;
+    static int R;
+    static final Scanner scanner = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        N = scanner.nextInt();
+        R = scanner.nextInt();
+
+        input = new int[N];
+        list = new int[N];
+
+        for(int i=0; i < N; i++){
+            input[i] = i+1;
+        }
+
+        for(int i=0; i < N; i++){
+            if(i < R)list[i] = 1;
+            else list[i] = 0;
+        }
+
+        Arrays.sort(list);
+
+        do {
+            System.out.println(Arrays.toString(list));
+            for(int i=0; i < N; i++){
+                if(list[i] == 1) System.out.println(input[i]);
+            }
+        } while (nextPermutation());
+    }
+
+    private static boolean nextPermutation() {
+        int i = list.length - 1;
+        int j = list.length - 1;
+        int k = list.length - 1;
+
+        while(i > 0 && list[i-1] >= list[i]) --i;
+        if(i <= 0) return false;
+
+        while(list[i-1] >= list[j]) --j;
+
+        swap(i-1, j);
+
+        while (i < k){
+            swap(i++,k--);
+        }
+
+        return true;
+    }
+
+    public static void swap(int i, int j){
+        int temp = list[i];
+        list[i] = list[j];
+        list[j] = temp;
+    }
+}
+```
