--- a/04 조합.md
+++ b/04 조합.md
@@ -168,7 +168,7 @@ np 한번당 조합이 하나 생기는 것이다.
 import java.util.*;
 
 class PermutationTest {
-    static int[] list;
+    static int[] conList;
     static int[] input;
     static int N;
     static int R;
@@ -179,28 +179,28 @@ class PermutationTest {
         R = scanner.nextInt();
 
         input = new int[N];
-        list = new int[N];
+        conList = new int[N];
 
         for(int i=0; i < N; i++){
             input[i] = i+1;
         }
 
         for(int i=0; i < N; i++){
-            if(i < R)list[i] = 1;
-            else list[i] = 0;
+            if(i < R)conList[i] = 1;
+            else conList[i] = 0;
         }
 
-        Arrays.sort(list);
+        Arrays.sort(conList);
 
         do {
-            System.out.println(Arrays.toString(list));
+            System.out.println(Arrays.toString(conList));
             for(int i=0; i < N; i++){
-                if(list[i] == 1) System.out.println(input[i]);
+                if(conList[i] == 1) System.out.println(input[i]);
             }
-        } while (nextPermutation());
+        } while (nextPermutation(conList));
     }
 
-    private static boolean nextPermutation() {
+    private static boolean nextPermutation(int list[]) {
         int i = list.length - 1;
         int j = list.length - 1;
         int k = list.length - 1;
@@ -210,16 +210,16 @@ class PermutationTest {
 
         while(list[i-1] >= list[j]) --j;
 
-        swap(i-1, j);
+        swap(list, i-1, j);
 
         while (i < k){
-            swap(i++,k--);
+            swap(list, i++,k--);
         }
 
         return true;
     }
 
-    public static void swap(int i, int j){
+    public static void swap(int[] list, int i, int j){
         int temp = list[i];
         list[i] = list[j];
         list[j] = temp;
