--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -137,4 +137,21 @@ public class SubSet2 {
     }
 }
 ```
-* 공집합은 제외했다.    
+* 공집합은 제외했다.   
+
+**반복문으로 부분집합 만들기**   
+```
+FOR i in 1 -> 0
+    selected[i] <- i
+    FOR j in 1 -> 0
+        selected[2] <- j  
+	FOR k in 1 -> 0
+	    selected[3] <- k
+	    FOR m in 1 -> 3
+	        if selected[i] == 1 then
+		print i 
+
+
+
+
+```
