--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -151,7 +151,8 @@ FOR i in 1 -> 0
 	        if selected[i] == 1 then
 		print i 
 
-
-
-
 ```
+   
+## 바이너리 카운팅      
+* 원소 수에 해당하는 N개의 비트열을 이용한다.        
+* n번째 비트값이 1이면 n번째 원소가 포함되었음을 의미한다.      
