--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -156,3 +156,23 @@ FOR i in 1 -> 0
 ## 바이너리 카운팅      
 * 원소 수에 해당하는 N개의 비트열을 이용한다.        
 * n번째 비트값이 1이면 n번째 원소가 포함되었음을 의미한다.      
+
+|10진수|2진수|{ABCD}|
+|-----|-----|-------|
+|0|0000|{}|
+|1|0001|{A}|
+|2|0010|{B}|
+|3|0011|{B, A}|
+|4|0100|{C}|
+|5|0101|{C, A}|
+|6|0110|{C, B}|
+|7|0111|{C, B, A}|
+|8|1000|{D}|
+|9|1001|{D, A}|
+|10|1010|{D, B}|
+|11|1011|{D, B, A}|
+|12|1100|{D, C}|
+|13|1101|{D, C, A}|
+|14|1110|{D, C, B}|
+|15|1111|{D, C, B, A}|
+
