--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -176,3 +176,39 @@ FOR i in 1 -> 0
 |14|1110|{D, C, B}|
 |15|1111|{D, C, B, A}|
 
+`(flag & 1 << j)`만 사용해서 부분집합을 찾을 수 있다.  
+
+```java
+import java.util.*;
+
+class PermutationTest {
+    static int[] input;
+    static int N;
+    static final Scanner scanner = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        N = scanner.nextInt();
+        input = new int[N];
+
+        for(int i=0; i < N; i++){
+            input[i] = scanner.nextInt();
+        }
+
+        generateSubSet(1 << N);
+    }
+
+    private static void generateSubSet(int caseCount) {
+        // 아 flag는 모든 경우의 수를 나타내기 위해서 쓰는거구나
+        for (int flag = 0; flag < caseCount; flag++) {   // i는 비트마스킹이 되어있는 수
+            for (int j = 0; j < N; j++) { // 맨뒤부터 N개의 비트열을 확인한다. -> (1 << j) 이므로
+                if ((flag & 1 << j) != 0) {
+                    System.out.print(input[j] + " ");
+                } else {
+                    System.out.print("X ");
+                }
+            }
+            System.out.println();
+        }
+    }
+}
+```
