--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -156,6 +156,10 @@ FOR i in 1 -> 0
 ## 바이너리 카운팅      
 * 원소 수에 해당하는 N개의 비트열을 이용한다.        
 * n번째 비트값이 1이면 n번째 원소가 포함되었음을 의미한다.      
+* n이 4라고 가정하면 -> 15까지 돈다
+* i=0; i <= 1 << N-1
+* i=0; i < 1 << N-1
+ 
 
 |10진수|2진수|{ABCD}|
 |-----|-----|-------|
