--- a/09 그리디 알고리즘.md
+++ b/09 그리디 알고리즘.md
@@ -1,1 +1,47 @@
 # 그리디 
+탐욕 알고리즘은 최적해를 구하는 데 사용되는 근시안적인 방법         
+최적화 문제란 가능한 해들 중에서 가장 좋은(최대 또는 최소)해를 찾는 문제이다.          
+일반적으로, 머리 속에 떠오르는 생각을 검증 없이 바로 구현하면 Greedy 접근이 된다.        
+여러 경우 중 하나를 선택 할 때마다 그 순간에 최적이라고 생각되는 것을 선택해 나가는 방식으로 진행하여 최종적인 해답에 도달한다.     
+각 선택 시점에서 이루어지는 결정은 지역적으로는 최적이지만, 그 석택들을 계속 수집하여 최종적인 해답을 만들었다고 하여, 그것이 최적이라는 보장은 없다.   
+일단, 한번 선택된 것은 번복하지 않는다.  
+이런 특성 때문에 탐욕 알고리즘들은 단순하며, 또한 제한적인 문제들에 적용된다.   
+   
+`당시 최선 -> 당시 최선 -> 당시 최선`     
+똑같은 최선 알고리즘을 사용한다기 보다, 해당 케이스에서의 최선만 찾아간다고 생각하는게 좋을 것이다.      
+
+단, 당시의 최선을 선택하기에 -> 최적해를 구한다는 보장은 없다.    
+     
+물건값 : 1200   
+받은 돈 : 2000    
+거스름 돈 : 800     
+
+```
+500원 : 1개
+100원 : 3개
+50 : 0개
+10 : 0개
+
+500원이 100원을 3개 커버 가능 
+500원이 50원을 10개 커버 가능 
+500원이 10원을 50개 커버 가능 
+
+이래서 내림차순 정렬후 계산이 가능하다.   
+```
+거스름돈을 나타내는 돈들의 값들이 배수 관계이면 최대 단위로 정렬하고 계산하면 된다.   
+
+```
+500 : 1개
+400 : 0개 
+100 : 3개 
+50 : 0개
+10 : 0개
+
+하지만 실제로는 400원이 2개인게 가장 좋음  
+```
+이럴때는 어떻게 로직을 구성해야 하지?      
+다 돌린 다음에 나머지가 가장 낮은걸로 할까?       
+
+## 문제 - 배낭 짐싸기  
+
+
