Update 09 그리디 알고리즘.md

--- a/09 그리디 알고리즘.md
+++ b/09 그리디 알고리즘.md
@@ -42,6 +42,78 @@
 이럴때는 어떻게 로직을 구성해야 하지?      
 다 돌린 다음에 나머지가 가장 낮은걸로 할까?       
 
+## 방식
+* 0-1 knapsack   
+배낭에 물건을 통째로 담아야 하는 문제   
+물건을 쪼갤 수 없는 경으  
+
+* Fractional Knapsack  
+물건을 부분적으로 담는 것이 허용되는 문제  
+물건을 조갤 수 있는 경우  
+
+### 0-1 knapsack
+* 완전 검색으로 물건들의 집합 S에 대한 **모든 부분집합을 구한다.**    
+  * 가방에 넣을 수 있는 모든 조합을 다 따져본다.  
+* 부분집합의 총 무게가 W를 초과하는 집합들은 버리고, 나머지 집합에서 총 값이 가장 큰 집합을 선택할 수 있다.  
+* 물건의 개수가 증가하면 시간 복잡도가 지수적으로 증가한다.   
+  * 크기 n인 부분합의 수 2^n -> 한 25까지만 되겠지.   
+* 즉, 다해보는 경우는 n의 크기가 작을 때만 가능하다.  
+
+
+**예시**
+||무게|값|
+|-|-|-|
+|물건1|25|15|
+|물건2|10|9|
+|물건3|10|5|
+
+최적해 : (10kg, 9만원) + (10kg, 5만원) 20kg -> 14만원       
+  
+  
+* w = 30kg   
+
+방법 1 - 값이 비싼 물건부터 채운다.
+* 그리디 방법 : 25kg -> 10만원      
+* 최적이 아니다.      
+
+방법 2 - 무게가 가벼운 물건부터 채운다.
+* 그리디 방법 : (10kg, 9만원) + (10kg, 5만원) 20kg -> 14만원  
+* 최적해 -> 물건1 -> 15만원  
+
+방법 3 - 무게당 값이 높은 순서로 물건을 채운다.   
+
+||무게|값|값/kg|
+|-|-|-|-|
+|물건1|5|50|10/kg|
+|물건2|10|60|6/kg|
+|물건3|20|140|7/kg|
+
+* 그리디 방법 : 190만원 (물건1+3)    
+* 최적해 방법 : 200만원 (물건2+3)     
+  
+Fractional knapsack 문제     
+  
+||무게|값|값/kg|
+|-|-|-|-|
+|물건1|5|50|10/kg|
+|물건2|10|60|6/kg|
+|물건3|20|140|7/kg|
+
+* 문제의 일브룰 잘라서 담을 수 있다.     
+* 탐욕적인 방법 (물건1 + 물건3 + 물건2의 절반) -> 30kg, 220만원   
+
+
+
+
+
+
+
+
+
+
+  
+
+
 ## 문제 - 배낭 짐싸기  
 
 
