Update 09 그리디 알고리즘.md

--- a/09 그리디 알고리즘.md
+++ b/09 그리디 알고리즘.md
@@ -103,6 +103,28 @@ Fractional knapsack 문제
 * 탐욕적인 방법 (물건1 + 물건3 + 물건2의 절반) -> 30kg, 220만원   
 
 
+ 
+## 문제   
+김대리는 소프트웨어 개발팀들의 회의실 사용 신청을 처리하는 업무를 한다.         
+이번주 금요일에 사용 가능한 회의실은 하나만 존재하고, 다수의 회의가 신청도니 상태이다.     
+회의는 시작 시간과 종료시간이 있으며, 회의 시간이 겹치는 회의들은 동시에 열릴 수 없다.  
+**가능한 많은 회의**가 열리기 위해서는 회의들을 어떻게 배정해야 할까?      
+   
+* 회의 개수 
+* 시작 시간, 종료시간 
+  
+회의실을 가장 많이 써야하는 것이므로 시간이 짧은 순서로 해야한다.   
+  
+## 활동 선택 문제     
+시작시간과 종료시간이 있는 n개의 활동들의 집합    
+서로 겹치지 않는 최대갯수의 활동들의 집합 S를 구하는 문제   
+      
+양립 가능한 활동들의 크기가 최대가 되는 S의 부분집합 문제        
+   
+정렬이 가능한지 확인을 해보고 정렬 가능하면 오름차순이나 내림차순으로 정렬해보자   
+
+
+
 
 
 
