--- a/09 그리디 알고리즘.md
+++ b/09 그리디 알고리즘.md
@@ -113,17 +113,17 @@ Fractional knapsack 문제
 * 회의 개수 
 * 시작 시간, 종료시간 
   
-회의실을 가장 많이 써야하는 것이므로 시간이 짧은 순서로 해야한다.   
-  
+**회의실을 가장 많이 써야하는 것이므로 시간이 짧은 순서로 해야한다.**      
+    
 ## 활동 선택 문제     
 시작시간과 종료시간이 있는 n개의 활동들의 집합    
 서로 겹치지 않는 최대갯수의 활동들의 집합 S를 구하는 문제   
       
 양립 가능한 활동들의 크기가 최대가 되는 S의 부분집합 문제        
    
-정렬이 가능한지 확인을 해보고 정렬 가능하면 오름차순이나 내림차순으로 정렬해보자   
+정렬이 가능한지 확인을 해보고 정렬 가능하면 오름차순이나 내림차순으로 정렬해보자  
 
-
+회의실 문제는 전형적인 활동선택문제   
 
 
 
