--- a/03 순열.md
+++ b/03 순열.md
@@ -38,11 +38,14 @@ nPr = n * (n-1) *  ... * (n-n+1)
 순열이 이루어진 배열을 구했다해서 바로 답이 나오지는 않는다.       
 그렇기 때문에 우리는 이 준비단계? 부터 완벽히 마스터해야 문제를 풀 수 있는 수준이 된다.     
   
-배열을 만드는 방식은 여러가지가 존재한다.  
-그 중에서 반복문을 사용해서 간단히 만들 수 있는 방법에 대해서 먼저 알아보도록 한다.   
-  
-## 재귀를 이용한 순열 배열 구하기  
-### 중복 없는 순열
+순열을 구성하는 방법은 3가지가 존재한다.  
+
+1. 방문 체크 방법 
+2. next_permutation
+3. 비트 마스킹 
+     
+## 방문 체크 방법      
+### 중복 없는 방법    
 **케이스**   
 ```java
 numbers[] : 순열 저장 배열 
@@ -99,12 +102,12 @@ public class PermutationTest {
 	}
 }
 ```  
-순열은 조합이 아니기에 순서에 따라 다른 값이 들어올 수 있다.       
-즉, 3이 가장 첫번째 인덱스로 들어올 수 있다는 것이다.            
-그렇기 때문에, 반복문을 이용할 때, 처음부터 끝까지 탐색을 계속 진행해야 한다.        
-이 중에, `이미 선택한 적이 있다면?`이라는 조건을 붙여넣어서 중복을 피하도록 하면된다.  
-
-### 중복있는 순열
+순열은 조합이 아니기에 **순서에 따라 다르게 값이 들어올 수 있다.**             
+즉, 3이 가장 첫번째 인덱스로 들어올 수 있다는 것이다.                  
+그렇기 때문에, 반복문을 이용할 때, 처음부터 끝까지 탐색을 계속 진행해야 한다.            
+이 중에, **`이미 선택한 적이 있다면?`이라는 조건을 붙여넣어서 중복을 피하도록 하면된다.**      
+  
+### 중복있는 방법   
 
 ```java
 package com.ssafy.exhaustive;
@@ -134,22 +137,46 @@ public class PermutationTest {
 	}
 }
 ```   
-중복이 없는 순열은 앞선 중복이 있는 순열보다 간단하다.          
-중복 조건을 검사하는 배열과 로직을 전부 제거하면 된다.                  
-이해가 어렵다면 로직을 한 번 따라가보기를 바란다.              
-     
+**중복이 없는 순열은** 앞선 중복이 있는 순열보다 간단하다.              
+**중복 조건을 검사하는 배열과 로직을 전부 제거하면 된다.**                        
+         
 Flat 하게 생각하자면,      
 첫번째 인덱스의 값은 1부터n까지 바뀐다.    
 2번재 인덱스도 마찬가지로 1부터n까지 바뀐다.    
 3번재, 4번째... n번째도 마찬가지이다.       
-   
-## c++의 nextPermutation() Java에서 구현해보기     
-재귀를 이용한 방법 말고도, 반복문을 이용해서 순열을 구할 수 있다.
-이 경우, 주로 `do-while` 구문과 함께 이용한다.          
-       
-재귀 같은 경우는 `기저 조건`일 때부터 이제 값을 구하기 위한 로직을 처리하지만,     
-`nextPermutation()`같은 경우는 `do{}`에서 값을 구하기 위한 로직을 처리한다.     
+            
+## next_Permutation()    
+
+```java
+
+public static boolean next_permutation(int[] list) {
+    int i = list.length-1;
+    int j = list.length-1;
+    int k = list.length-1;
     
+    while( i > 0 && list[i-1] >= list[i]) --i;
+    if(i == 0) return false;
+   
+    while(list[i-1] >= list[j]) --j;
+    swap(i-1, j);
+
+    while(i < k) {
+        swap(list, i, k);
+	i++;
+	k--;
+    }
+    return true;
+}
+
+
+```
+`next_Permutation()`은 재귀방식을 이용하는 방문 체크 방식과는 달리,       
+`반복문`과 `swap()`을 이용하여 실제 배열의 값을 변형시키는 작업을 한다.      
+이러한, `next_Permutation()`은 주로 `do-while` 구문과 함께 이용한다.              
+       
+       
+       
+       
 ```java
 import java.util.*;
 
