--- a/03 순열.md
+++ b/03 순열.md
@@ -154,7 +154,7 @@ public static boolean next_permutation(int[] list) {
     int j = list.length-1;
     int k = list.length-1;
     
-    while( i > 0 && list[i-1] >= list[i]) --i;
+    while(i > 0 && list[i-1] >= list[i]) --i;
     if(i == 0) return false;
    
     while(list[i-1] >= list[j]) --j;
@@ -169,14 +169,13 @@ public static boolean next_permutation(int[] list) {
 }
 
 
-```
-`next_Permutation()`은 재귀방식을 이용하는 방문 체크 방식과는 달리,       
-`반복문`과 `swap()`을 이용하여 실제 배열의 값을 변형시키는 작업을 한다.      
-이러한, `next_Permutation()`은 주로 `do-while` 구문과 함께 이용한다.              
-       
-       
-       
-       
+```  
+`next_Permutation()`은 재귀방식을 이용하는 방문 체크 방식과는 달리,         
+`반복문`과 `swap()`을 이용하여 실제 배열의 값을 변형시키는 작업을 한다.         
+이러한, `next_Permutation()`은 주로 `do-while` 구문과 함께 이용한다.               
+참고로, `next_Permutation()`은 조합에서도 사용이 가능하고 이 부분은 다음장에서 정리하겠다.        
+            
+**실제 코드 구현**   
 ```java
 import java.util.*;
 
@@ -229,7 +228,11 @@ class PermutationTest {
     }
 }
 ```
-참고로, 조합에서도 사용이 가능하다.       
+
+
+
+
+
 
 순열재귀 + 구현
 조합 + 구현
