--- a/03 순열.md
+++ b/03 순열.md
@@ -201,7 +201,7 @@ class PermutationTest {
         int j = list.length - 1;
 	int k = list.length - 1;
         
-	while(i > 0 && list[i-1] >= list[i]) --i;			// 같거나 큰값이 있다면 계속해서 큰 값으로 올라간다.
+	while(i > 0 && list[i-1] >= list[i]) --i;			//.
         if(i <= 0) return false;					// 꼭대기가 0번째 인덱스라면 마지막순열을 의미하므로 종료시킨다.   
 
         while(list[i-1] >= list[j]) --j;				// i-1보다 한 단계 큰수를 찾아서 찾아서 교환하자    
@@ -229,17 +229,13 @@ class PermutationTest {
 }
 ```
 
-
-
-
-
-
-순열재귀 + 구현
-조합 + 구현
-   
-시뮬레이션 문제가 많다.   
-
 **해석**  
+1. 오른쪽부터 시작해서, 내림차순이 이루어지는 범위의 가장 꼭대기 값을 찾는다.            
+2. 내림차순 범위의 다음값은 가장 꼭대기 값보다 작은 값이기에 Swap 대상이 된다.           
+3. 내림차순 범위중에서 Swap대상(꼭대기 다음값)보다 큰 수중  가장 작은 수를 찾는다.(한 칸 앞수)       
+   앞서 말했듯이 범위가 내림차순이기에 먼저 만나는 값이 swap대상보다 큰 값중 가장 작은 값이다.     
+5. 
+
 1. `i`와 `j`는 마지막 인덱스부터 시작한다.   
 2. `i`는 자기 **자신보다 작은 수가 나올 때까지 왼쪽으로 이동**한다.   
 3. 만약 자기자신보다 작은 수가 없다면, 즉 현재 배열상태가 내림차순이라면 종료한다.   
