Update 09 그리디 알고리즘.md

--- a/09 그리디 알고리즘.md
+++ b/09 그리디 알고리즘.md
@@ -125,7 +125,16 @@ Fractional knapsack 문제
 
 회의실 문제는 전형적인 활동선택문제   
 
+## 탐욕 알고리즘의 필수 요소   
+* 탐욕적 선택 속성   
+탐욕적 선택은 최적해로 갈 수 있음을 보여라   
+즉, 탐욕적 선택은 항상 안전하다.  
 
+* 최적 부분 구조  
+최적화 문제를 정형화해라   
+하나의 선택을 하면 풀어야 할 하나의 하위 문제가 남는다.  
+   
+* **원문제의 최적해 = 탐욕적 선택 + 하위 문제의 최적해**임을 증명해라   
 
 
 
