--- a/03 순열.md
+++ b/03 순열.md
@@ -231,47 +231,26 @@ class PermutationTest {
 
 **해석**  
 1. 오른쪽부터 시작해서, 내림차순이 이루어지는 범위의 가장 꼭대기 값을 찾는다.            
-2. 내림차순 범위의 다음값은 가장 꼭대기 값보다 작은 값이기에 Swap 대상이 된다.           
-3. 내림차순 범위중에서 Swap대상(꼭대기 다음값)보다 큰 수중  가장 작은 수를 찾는다.(한 칸 앞수)       
+2. 만약 꼭대기 값이 맨 앞에 위치한다면 이는 순열이 종료했음을 의미한다.  
+3. 내림차순 범위의 다음값은 가장 꼭대기 값보다 작은 값이기에 Swap 대상이 된다.           
+4. 내림차순 범위중에서 Swap대상(꼭대기 다음값)보다 큰 수중  가장 작은 수를 찾는다.(한 칸 앞수)       
    앞서 말했듯이 범위가 내림차순이기에 먼저 만나는 값이 swap대상보다 큰 값중 가장 작은 값이다.     
-5. 
-
-1. `i`와 `j`는 마지막 인덱스부터 시작한다.   
-2. `i`는 자기 **자신보다 작은 수가 나올 때까지 왼쪽으로 이동**한다.   
-3. 만약 자기자신보다 작은 수가 없다면, 즉 현재 배열상태가 내림차순이라면 종료한다.   
-4. `j`는 **`i-1`보다 큰 수가 나올 때 까지 j를 왼쪽으로 이동**한다.            
-5. 이제 swap을 한건데 중요한점은 i가 아닌 `i-1`을 swap 한다.          
-6. 이후 swap된 값 이후의 값들도 swap을 진행해서 값을 정렬시켜준다.         
-7. 중간 구역은 내림차순으로 정렬 되었을테니 이를 오름차순으로 바꾸기 위해서 swap을 하는 것이다.     
-  
+5. i-1과 j를 swap 하면 바로 자릿수의 값이 증가된 상태가 된다.   
+6. i부터 마지막 까지는 이제 내림차순에서 오름차순으로 변경해주는 Swap을 진행해준다.     
+   내림차순이기에 대칭되는 순서에 맞게 swap을 하면 오름차순으로 바뀐다.   
+      
 **31542 기준으로 예시를 들어보면 아래와 같다.**       
       
 * i는 5에서 멈춤 (인덱스 2)    
-* j는 2에서 멈춤 (4 > 2, 인덱스 4)    
+* j는 2에서 멈춤 (1 < 2, 인덱스 4)    
 * i-1을 스왑하므로 1이랑 2 스왑    
 * 32541 인데 오름차순으로 정렬해야함    
 * 순열의 특성상, swap 이후의 값들은 이미 내림차순으로 정렬됨  
 * 5432라 가정한다면 -> 2랑 5랑 바꾸기/ 3이랑 4를 바꾸기 -> 2345가 된다.   
 * 32145가 된다.           
-         
-SSAFY 버전       
-1. 뒤쪽부터 탐색하여 교환위치 찾기(i-1)(i는 꼭대기) 왼쪽수가 자기보다 작은 수 찾기   
-2. 뒤쪽부터 탐색하여 교환위치와 교환할 큰 값 위치 찾기(J)   
-3. 두 위치 교환  
-4. 꼳대기위치부터 맨 뒤까지 오름차순 정렬 
-5. 꼭대기라는 것은 범위중에서 가장 큰 값이라는 것이니까 끝포인트를 서로 교환함     
-
-      
-## 반복문 없이 재귀만 사용해서 중복 없는 순열 구하기     
-필자가 가장 많이 사용하는 방법이다.   
-이 같은 방법은 주로, **`사용하는` 경우**, **`사용하지 않는` 경우**로 나눠질 때 사용한다.    
-
-```java
-
-```
-
-
+        
 ## 비트 마스킹을 통한 순열 생성
+비트마스킹을 이용한 순열 생성은 npn일 경우에만 가능하다.  
 ```
 nPn
 ```
