--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -12,3 +12,10 @@ n개의 동전들 중에 가짜 동전이 하나 포함되어 있다.
 내 생각 : 24니까, 2개로 나누어서 무게가 작은쪽을 선택하는 방식     
 이분탐색인 것 같기도..  
 
+## 설계전략   
+* 분할 : 해결할 문제를 여러 개의 작은 부분으로 나눈다.   
+* 정복 : 나눈 작은 문제를 각각 해결해야한다.     
+* 통합 : 필요하다면, 해결된 해답을 모은다.    
+  
+이분탐색이라 딱 단정짓는 것은 아니고     
+2개, 3개.. 여러개를 나누더라도 모든 depth가 같은 로직으로 쪼개고 정답을 도출해야한다.   
