--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -19,3 +19,20 @@ n개의 동전들 중에 가짜 동전이 하나 포함되어 있다.
   
 이분탐색이라 딱 단정짓는 것은 아니고     
 2개, 3개.. 여러개를 나누더라도 모든 depth가 같은 로직으로 쪼개고 정답을 도출해야한다.   
+
+```
+Recursive_Power(x, n)
+    IF n == 1 : return X;
+    IF n is even
+        y <- Recursive_Power(x, n/2)  
+        RETURN y * y
+    ELSE
+        y <- Recursive_Power(x, (n-1)/2)
+        RETURN y * y * X
+```
+   
+2의 10억승을 풀수있는가?        
+절대, 일반적인 반복문은 못한다.       
+나머지 연산을 한다음에 나온 값을 구하라는 문제이다.   
+예를 들어 ,10000007로 나눈 나머지 값을 출력해라 -> 나머지 먼저 하고 문제 풀기   
+
