--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -23,11 +23,11 @@ n개의 동전들 중에 가짜 동전이 하나 포함되어 있다.
 ```
 Recursive_Power(x, n)
     IF n == 1 : return X;
-    IF n is even
+    IF n is even                          // 짝수라면
         y <- Recursive_Power(x, n/2)  
         RETURN y * y
-    ELSE
-        y <- Recursive_Power(x, (n-1)/2)
+    ELSE                                  // 홀수라면 
+        y <- Recursive_Power(x, (n-1)/2)  // 홀수이기에 -1 해준다. 
         RETURN y * y * X
 ```
    
