--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -26,9 +26,9 @@ Recursive_Power(x, n)
     IF n is even                          // 짝수라면
         y <- Recursive_Power(x, n/2)  
         RETURN y * y
-    ELSE                                  // 홀수라면 
-        y <- Recursive_Power(x, (n-1)/2)  // 홀수이기에 -1 해준다. 
-        RETURN y * y * X
+    ELSE                                  // 홀수라면     
+        y <- Recursive_Power(x, (n-1)/2)  // 홀수이기에 -1 해준다.     
+        RETURN y * y * X                  // 그리고 한칸 뺐기 때문에, 다시 X를 곱해준다.    
 ```
    
 2의 10억승을 풀수있는가?        
