--- a/03 순열.md
+++ b/03 순열.md
@@ -250,10 +250,13 @@ class PermutationTest {
 * 32145가 된다.           
         
 ## 비트 마스킹을 통한 순열 생성
-비트마스킹을 이용한 순열 생성은 npn일 경우에만 가능하다.  
 ```
 nPn
 ```
+비트마스킹을 이용한 순열 생성은 nPn일 경우에만 가능하며        
+중복을 허용하지 않는 순열을 구할 때 사용한다. (일반적인 순열)            
+우선 비트마스킹에 대해서 알고 싶다면 [해당 페이지](#)를 참고바란다.      
+        
 **기존 방식**
 ```java
 numbers[] : 순열 저장 배열 
@@ -289,6 +292,14 @@ else
     end for 
 end perm    
 ```
+
+기존 방식과 비교해보면, 다음과 같은 특징이 있다.   
+
+* 중복을 체크하는 전역 배열 대신에 매개변수 flag가 생겼다.   
+* 
+
+
+
 * 비트를 이용해 중복체크, 방문했다는 처리도 함
 * 배열을 안 만들어도 되니까, 인덱스 찾는 연산과 메모리적으로 효율이 좋아졌다.    
 
