--- a/03 순열.md
+++ b/03 순열.md
@@ -275,9 +275,9 @@ perm(cnt) // cnt : 현재까지 뽑은 순열 수의 개수
         end_for
 end perm	
 ```
-   
+     
 **비트마스킹 방식**
-```
+```java
 input[] 순열 저장
 numbers[] 순열 저장 배열  
 
@@ -291,18 +291,15 @@ else
         perm(cnt+1, flag | 1 << i); // |을 하면 그만큼을 더한 것이다.  
     end for 
 end perm    
-```
-
-기존 방식과 비교해보면, 다음과 같은 특징이 있다.   
-
-* 중복을 체크하는 전역 배열 대신에 매개변수 flag가 생겼다.   
-* 
-
-
-
-* 비트를 이용해 중복체크, 방문했다는 처리도 함
-* 배열을 안 만들어도 되니까, 인덱스 찾는 연산과 메모리적으로 효율이 좋아졌다.    
-
+```  
+기존 방식과 비교해보면, 다음과 같은 특징이 있다.     
+     
+* 중복을 체크하는 전역 배열 대신에 매개변수 flag가 생겼다.         
+* falg의 값이 `&`로 비교되고 `|`로 합쳐지는 방식이다.       
+      
+위 내용을 요악하자면 비트를 이용해 중복체크, 방문했다는 처리를 하고 있다.          
+비트 연산 같은 경우, 배열을 안 만들어도 되니까, 인덱스 찾는 연산이 줄고 메모리 효율이 좋다.                
+      
 ## 잠깐 알아두고 갈 비트 연산 상식 
   
 |연산자|연산자의 기능|
