--- a/08 비트마스킹.md
+++ b/08 비트마스킹.md
@@ -260,5 +260,152 @@ int main() {
 
 
 
+## 잠깐 알아두고 갈 비트 연산 상식 
+  
+|연산자|연산자의 기능|
+|-----|------------|
+|&|논리곱<br>비트 단위로 AND 연산을 한다.<br>num1 & num2<br>num2에 내용이 num1에 포함되었는지 확인한다.<br>주로 이미 방문했는가를 판단한다.|    
+|`세로`|논리합<br>비트단위로 OR 연산을 한다<br>num1 | num2<br>num1과 num2를 합친다<br>주로 방문했는지 &로 검증하고 방문하지 않았다면 방문했다 처리한다.|    
+|^|비트 단위로 XOR 연산을 한다.(같으면0, 다르면1)|
+|~|단한 연산자로서 피 연산자의 모든 비트를 반전시킨다.|
+|<<|피연산자의 비트 열을 왼쪽으로 이동시킨다.|
+|>>|피연산자의 비트 열을 오른쪽으로 이동시킨다. 0으로 채운다.|   
+|>>>|피연산자의 비트 열을 오른쪽으로 이동시키는데 부호도 같이 채운다.|
 
+```java
+value << n
+```
+* value를 n비트 만큼 왼쪽으로 shift   
+* 왼쪽으로 밀어내고 남는 오른쪽 자리는 0으로 채움 
+* 10 << 2 -> 20
+
+이동 전 
+|0|0|0|0|1|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+이동 후    
+|0|0|0|1|0|1|0|0|
+|-|-|-|-|-|-|-|-|
+
+* 1 << 1
+
+이동 전 
+|0|0|0|0|0|0|0|1|
+|-|-|-|-|-|-|-|-|
+
+이동 후    
+|0|0|0|0|0|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+
+우리는 대부분 위와 같은 형식으로 많이 사용할 것ㅇ디ㅏ.
+
+
+```java
+value1 & valu2
+```
+* value1 과 value2를 연산   
+* 각 비트열을 비교하여 두 비트 모두 1이면  1, 아니면 0으로 처리   
+* 내가 원하는 그 비트자리만 확인하겠다는 뜻이다.
+* 주로, 여기를 방문했냐? 안했냐로 사용한다.  
+* 그렇기 때문에 `1 << i`를 사용하여 여기를 방문했는지 확인한다. 
+* 참고로 비트는 배열로 true/false 하려 했는데 범위가 너무 커서 배열을 만들지 못할 때 사용한다.    
+
+
+* 10 & 2
+
+**10**
+|0|0|0|0|1|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+**2**
+|0|0|0|0|0|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+**결과** 
+|0|0|0|0|0|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+* 정리하자면 아래와 같다.   
+
+
+**방문한적이 있다**
+```
+값 & (1 << i)) == (1 << i) // 방문한적이 있다.   
+```
+
+**방문한적이 없다.**
+```
+값 & (1 << i)) == 0 // 방문한적이 없다.   
+```
+
+* 10 | 2
+* value1 과 value2를 `|` 연산   
+* 각 비트열을 비교하여 두 비트중 하나라도 1이면  1, 아니면 0으로 처리       
+* 내가 원하는 그 비트자리를 1로 바꾼다, 지금 방문했다라고 표현할 때 사용한다.    
+* 그렇기 때문에 `1 << i`를 사용하여 여기를 방문했는지 확인하고 0이면 `|`로 방문했다 처리한다.      
+
+**10**
+|0|0|0|0|1|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+**2**
+|0|0|0|0|0|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+**결과** 
+|0|0|0|0|1|0|1|0|
+|-|-|-|-|-|-|-|-|
+
+* 정리하자면 아래와 같다.   
+
+**첫 번째 방법**
+```
+if(값 & (1 << i)) == 0) {
+    값 | (1 << i) // 여기를 방문했다. 
+}
+```
+
+**두 번째 방법**
+```
+if(값 & (1 << i)) == (1 << i)) continue;
+값 | (1 << i) // 여기를 방문했다. 
+
+또는 
+if(값 & (1 << i)) != 0) continue;
+값 | (1 << i) // 여기를 방문했다. 
+
+```
+
+____
+
+```java
+    public static void main(String[] args) throws IOException {
+        int k = 0xa5;   // 1010 0101
+        System.out.println(k & 1);       // 1    2의 0승
+        System.out.println((k & 1 << 1) + "//" + Integer.toBinaryString(k & 1 << 1)); // 0    2의 2승
+        System.out.println((k & 1 << 2) + "//" + Integer.toBinaryString(k & 1 << 2)); // 1   2의 3승
+        System.out.println((k & 1 << 3) + "//" + Integer.toBinaryString(k & 1 << 3)); // 0    2의 3승
+        System.out.println((k & 1 << 4) + "//" + Integer.toBinaryString(k & 1 << 4)); // 0    2의 4승
+        System.out.println((k & 1 << 5) + "//" + Integer.toBinaryString(k & 1 << 5)); // 1    2의 5승
+        System.out.println((k & 1 << 6) + "//" + Integer.toBinaryString(k & 1 << 6)); // 0    2의 6승
+        System.out.println((k & 1 << 7) + "//" + Integer.toBinaryString(k & 1 << 7));; // 1    2의 7승
+    }
+/* 결과
+1
+0//0
+4//100
+0//0
+0//0
+32//100000
+0//0
+128//10000000
+*/  
+```
+1은 이미 사용중  
+0은 사용하지 않음   
+      
+32비트의 정수를 사용한다면?          
+32개의 flag를 만드는 것이다.        
+`boolean [] flag`  == `int flag=0` 와 똑같다.     
 
