--- a/04 조합.md
+++ b/04 조합.md
@@ -6,7 +6,9 @@
 즉, `nCr`이 주어지면, n개중 r개를 뽑는 경우의 수/집합을 구하는 것이다.    
    
 ## 조합을 구하는 공식   
-**점화식을 통한 조합 만들기**
+
+
+### 점화식을 통한 조합 만들기**
 ```
 nCr = ((n-1)C(r-1)) + ((n-1)C(r))
 nC0 = 1
