--- a/04 조합.md
+++ b/04 조합.md
@@ -4,11 +4,14 @@
 몇 개를 뽑을지에 대한 **고정된 값**이 주어지고 **이를 채우는 집합**이라 생각하자        
      
 즉, `nCr`이 주어지면, n개중 r개를 뽑는 경우의 수/집합을 구하는 것이다.    
-   
-## 조합을 구하는 공식   
+     
+## 조합을 구하는 공식     
+1. 점화식 기반의 재귀함수       
+2. 방문 체크 방식의 재귀함수      
+3. next_permutaion 방식      
 
 
-### 점화식을 통한 조합 만들기**
+### 점화식을 통한 조합 만들기
 ```
 nCr = ((n-1)C(r-1)) + ((n-1)C(r))
 nC0 = 1
