--- a/04 조합.md
+++ b/04 조합.md
@@ -6,9 +6,26 @@
 즉, `nCr`이 주어지면, n개중 r개를 뽑는 경우의 수/집합을 구하는 것이다.    
      
 ## 조합을 구하는 공식     
-1. 점화식 기반의 재귀함수       
-2. 방문 체크 방식의 재귀함수      
-3. next_permutaion 방식      
+1. 반복문 기반
+2. 점화식 기반의 재귀함수       
+3. 방문 체크 방식의 재귀함수      
+4. next_permutaion 방식      
+
+### 반복문만을 이용한 조합 방법      
+```java
+4C3  
+
+for i from 1 to 4
+    for j from i+1 to 4			// i보다 +1이니까 중복 x 
+        for k from j+1 t0 4		// j보다 +1이니까 중복 x 
+	    print i j k
+	end for
+    end for
+end for
+```
+반복문을 이용하여 조합을 구현할 수 있다.   
+하지만, n이랑r이 증가되면 그만큼 for문을 사용해줘야 한다.   
+
 
 
 ### 점화식을 통한 조합 만들기
@@ -63,18 +80,6 @@ public class Combination {
 원래는 배열에 넣었던 값도, 재귀를 끝나면 원래대로 초기화를 시켜줘야 하지만       
 어차피 재귀를 돔면서 값을 덮어주기 때문에 단순하게 처음에 넣는 작업만한다.     
 
-**반복문만을 이용한 조합 방법**   
-```java
-4C3  
-
-for i from 1 to 4
-    for j from i+1 to 4			// i보다 +1이니까 중복 x 
-        for k from j+1 t0 4		// j보다 +1이니까 중복 x 
-	    print i j k
-	end for
-    end for
-end for
-```
 
 **반복문과 재귀를 함께 이용한 조합 방법**        
 ```java
