--- a/04 조합.md
+++ b/04 조합.md
@@ -23,24 +23,28 @@ for i from 1 to 4
     end for
 end for
 ```
-반복문을 이용하여 조합을 구현할 수 있다.   
-하지만, n이랑r이 증가되면 그만큼 for문을 사용해줘야 한다.   
-
-
-
-### 점화식을 통한 조합 만들기
+반복문을 이용하여 조합을 구현할 수 있다.     
+하지만, r이 증가되면 그만큼 for문을 사용해줘야 한다.        
+   
+위 코드에서는 4C3이기 때문에 3개의 중첩 반복문을 사용했다.    
+그리고 depth가 깊어질 수록 중복이 되면 안 되니, `이전 값+1`부터 시작한다.    
+    
+위 방법은 매우 추천하지 않으므로 코드 구현없이 넘어가겠다.    
+   
+### 점화식 기반의 재귀함수
+**점화식**
 ```
 nCr = ((n-1)C(r-1)) + ((n-1)C(r))
 nC0 = 1
 ```
-조합을 구하는 공식을 해석해보면 아래와 같다.  
-
+조합을 구하는 점화식을 해석해보면 아래와 같다.     
+   
 * `nCr` : 현재 우리가 구하려는 값 
 * `n-1Cr-1` : 한개를 뽑았다 가정한 값 , 대신 앞으로 뽑을 r은 1개 줄어든다.  
 * `n-1Cr` : 한개를 뽑지 않았다고 가정한 값, 대신 앞으로 뽑을 r은 그대로고, 다음부터 뽑아야 하니 n-1    
-            
+               
 조금 이해가 어려울 수 있지만 이를 코드를 통해 알아보면 바로 이해가 될 것이다.               
-           
+             
 **점화식을 통한 조합 만들기**
 ```java
 public class Combination { 
@@ -57,7 +61,7 @@ public class Combination {
 	    combination(arr, index + 1, n, r - 1, target + 1); 
 	    combination(arr, index, n, r, target + 1); 
 	} 
-    }//end combination() 
+    }
     
     public static void print(int[] arr, int length) { 
         for (int i = 0; i < length; i++) {
