--- a/04 조합.md
+++ b/04 조합.md
@@ -6,12 +6,12 @@
 즉, `nCr`이 주어지면, n개중 r개를 뽑는 경우의 수/집합을 구하는 것이다.    
      
 ## 조합을 구하는 공식     
-1. 반복문 기반
+1. 반복문을 이용한 방법
 2. 점화식 기반의 재귀함수       
 3. 방문 체크 방식의 재귀함수      
 4. next_permutaion 방식      
 
-### 반복문만을 이용한 조합 방법      
+### 반복문을 이용한 방법     
 ```java
 4C3  
 
@@ -84,8 +84,7 @@ public class Combination {
 원래는 배열에 넣었던 값도, 재귀를 끝나면 원래대로 초기화를 시켜줘야 하지만       
 어차피 재귀를 돔면서 값을 덮어주기 때문에 단순하게 처음에 넣는 작업만한다.     
 
-
-**반복문과 재귀를 함께 이용한 조합 방법**        
+## 방문 체크 방식의 재귀함수        
 ```java
 nCr -> n개의 원소 중 r개 원소를 갖는 조합 생성  
 input[] : n개의 원소를 가지고 있는 배열  
@@ -133,14 +132,21 @@ public class CombinationTest {
 ```      
 반복문과 재귀를 이용한 방법으로 풀었다.                        
 이런식으로 코드를 작성할 경우, `combination(cnt, i+1);` 를 생략해도 된다.               
-    
-**넥스트퍼뮤테이션을 이용해서 조합만들기**    
+          
+## next_permutaion 방식       
+들어온 값을 저장하는 배열을 `next_permutaion` 하는 것이 아니라,        
+들어온 값을 저장하는 배열의 상태를 저장한 배열을 `next_permutaion`한다.      
+  
+1. N 만큼의 상태를 저장하는 배열을 만든다.         
+2. R 만큼 1로 채우고 나머지는 0으로 채운다.        
+3. Sorting을 해서 0이 앞에 1이 뒤에 오게끔 정렬시킨다.      
+4. 상태를 저장한 배열을 `next_permutation`으로 돌린다.        
+5. N만큼 반복문을 돌리는데, 상태 배열의 값이 1인 경우만 기존 배열의 값을 출력한다.      
 
-* n만큼의 배열을 만드는데 r개만큼의 1을 넣는다.      
-* 해당 배열을 np로 1의값과 0의 값의 위치를 계속 변형시켜준다.   
-* 해당 부분에 있는 배열만 출력하면 된다.  
-
+### 예시   
+```
 4C2
+```
 
 |1|2|3|4|
 |-|-|-|-|
@@ -148,32 +154,37 @@ public class CombinationTest {
 |0|0|1|1|
 |-|-|-|-|
 
-34
+3, 4
+___
 
 |0|1|0|1|
 |-|-|-|-|
 
-24
+2, 4
+___
 
 |0|1|1|0|
 |-|-|-|-|
 
-23
-
+2, 3
+___
 |1|0|0|1|
 |-|-|-|-|
 
-14
+1, 4
+___
 
 |1|0|1|0|
 |-|-|-|-|
 
-13
+1, 3
+___
 
 |1|1|0|0|
 |-|-|-|-|
 
-12
+1, 2
+___
 
 이렇게 사용하면 r번을 타고들어가는게 아니라     
 np 한번당 조합이 하나 생기는 것이다.         
