--- a/04 조합.md
+++ b/04 조합.md
@@ -142,8 +142,11 @@ public class CombinationTest {
 3. Sorting을 해서 0이 앞에 1이 뒤에 오게끔 정렬시킨다.      
 4. 상태를 저장한 배열을 `next_permutation`으로 돌린다.        
 5. N만큼 반복문을 돌리는데, 상태 배열의 값이 1인 경우만 기존 배열의 값을 출력한다.      
-
-### 예시   
+   
+이 같은 방법을 사용하면 다른 방법들과 다르게 재귀를 사용하는 것이 아니라, 반복문을 사용한다.       
+즉, `next_permutation()` 작업 한번에 조합이 하나 생긴다.            
+   
+**예시**     
 ```
 4C2
 ```
@@ -214,9 +217,8 @@ ___
 1, 2
 ___
 
-이렇게 사용하면 r번을 타고들어가는게 아니라     
-np 한번당 조합이 하나 생기는 것이다.         
 
+**실제 구현**
 ```java
 import java.util.*;
 
