--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -8,17 +8,13 @@
 * 1, 0, -1,-2,-3 인 경우라면 1만 뽑는게 가장 좋은 부분집합이다.    
 * 1, 2, 3, -1, -2, -3 인 경우라면 123 뽑는게 가장 좋은 부분집합이다.  
               
-**부분집합의 경우의 수**   
-       
-* 집합의 원소가 `n개`일때, 공집합을 포함한 부분집합의 수는 `2^n`이다.            
-* 각 원소를 부분집합에 포함시키거나 포함시키지 않는 경우이기 때문이다.      
-* 
-	    
-기존에 내가 자주 사용하던 재귀 알고리즘이다.         
-       
-* 입력된 숫자로 구성된 집합의 모든 부분 집합생성   
-* 재귀적 구현을 통해 생성하는 방법  
-   
+# 부분집합을 구하는 공식    
+  
+1. 방문 체크 방식
+2. 
+3.
+
+## 방문 체크 방식
 ```
 input[]		// 숫자 배열
 isSelected[]	// 부분집합에 포함/비포함의 형태로 재귀적 구현을 함    
@@ -147,7 +143,7 @@ public class SubSet2 {
 ```
 * 공집합은 제외했다.   
 
-**반복문으로 부분집합 만들기**   
+### 반복문으로 부분집합 만들기**   
 ```
 FOR i in 1 -> 0
     selected[i] <- i
