--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -15,7 +15,7 @@
 3. 방문 체크 방식의 재귀함수
 4. next_permutaion 방식
 
-## 반복문으로 부분집합 만들기**   
+## 반복문으로 부분집합 만들기   
 ```
 FOR i in 1 -> 0
     selected[i] <- i
