--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -16,7 +16,7 @@
 4. next_permutaion 방식
 
 ## 반복문으로 부분집합 만들기   
-```
+```java
 FOR i in 1 -> 0
     selected[i] <- i
     FOR j in 1 -> 0
@@ -33,10 +33,9 @@ END FOR
 ```
 
 
-
-   
+ 
 ## 방문 체크 방식
-```
+```java
 input[]		// 숫자 배열
 isSelected[]	// 부분집합에 포함/비포함의 형태로 재귀적 구현을 함    
 
