--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -98,6 +98,14 @@ public class BinarySearch {
 		int[] arr = {3, 11, 15, 20, 21, 29, 45};
 		Arrays.sort(arr);
 		System.out.println(binarySearch(arr, 29));
+		System.out.println(binarySearch(arr, 0, arr.length-1, 15));
+		System.out.println(Arrays.binarySearch(arr, 15));
+		System.out.println(Arrays.binarySearch(arr, 0, arr.length, 45));
+		System.out.println(Arrays.binarySearch(arr, 13)); 
+		//Arrays.binarySearch : 원소 못찾으면 (-1 * (insertionpoint))-1
+		// -2정도에 있어야 하는데 + -1 더해줌, 0일경우는 -0하면 똑같으니까 -1 더 빼주는 것
+		// 그러면 예상되는 값 구하기? 절대값 바꾸고, =1하면 예상 위치 다시 찾음
+			
 	}
 	
 	private static int binarySearch(int[] arr, int key) {
@@ -118,15 +126,13 @@ public class BinarySearch {
 		if(start <= end) {
 			int mid = (start+end)/2;
 			if(arr[mid] == key) return mid;
-			if(arr[mid] < key) return binarySearch(arr,start, mid, key);
-			if(arr[mid] > key) return binarySearch(arr,mid, end, key);	
+			else if(arr[mid] < key) return binarySearch(arr, mid+1,end, key);
+			else return binarySearch(arr,start, mid-1, key);	
 		}
-		
 		return -1;
 	}
 	
 	// 기저 조건 다르게
-	
 	private static int binarySearch(int[] arr, int start, int end, int key) {
 		if(start > end) {
 			return -1;
@@ -141,6 +147,7 @@ public class BinarySearch {
 	}
 	
 }
+
 ```
    
   
