--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -1,1 +1,36 @@
-# 
+## N-Queen   
+`n x n` 서양 장기판에서 배치한 Queen들이 서로 위협하지 않도록 n 개의 Queen을 배치하는 문제  
+  
+* 어떤 두 Queen도 서로를 위협하지 않아야한다.     
+* Queen을 배치한 n개의 위치          
+
+무식하게 풀기   
+* Q1 놓고
+* Q2 놓고
+* Q3 넣고 
+* Qn 넣기  
+
+* 퇴각 검색 (뒤로 물러나다)    
+* 모든 조합을 시도해서 문제의 해를 찾는다.(우리가 아는 조합이 아니다.)   
+* 즉, 가능한 **모든 시도를 조합하는 것이다.**, 여러 대상의 재귀를 진행하면서 최적의 값 찾기       
+* 해를 얻을 때 가지 모든 가능성을 시도한다.  
+* 모든 가능성은 하나의 트리처럼 구성할 수 있으며, 가지(선택)중에 해결책이 있다.  
+* 여러 가지들(선택지들)이 존재하는 상황에서 하나의 가지를 선택한다.  
+* 선택이 이루어지면 새로운 선택지들의 새로운 집합이 생성된다.   
+* 이런 선택을 반복하면서 최종 상태에 도달한다.   
+* 보통 재귀함수로 구현한다.      
+* 상태 공간 트리로 구현하고 이를 탐색한다.  
+* 트리를 탐색하는 것이기 때문에 DFS,BFS를 사용하지만 주로 DFS를 사용한다       
+      
+가능성을 시도해보고, 해가 없으면? 다시 뒤로 돌아간다.      
+뒤로 돌아가서 다시 검색한다.   
+여기서 할 거 다했는데 답이 없어요 -> 뒤로 돌아가서 다음칸을 시도한다.      
+
+    
+    
+난 좀 헷갈리는데..    
+**백 트래킹은 분할 정복을 이용한 완전 검색(Exhaustive Search)기법**      
+어떤 경우에는 문제를 푸는 최선의 알고리즘이 모든 경우의 수를 다 살펴보는 것     
+   
+
+
