--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -31,6 +31,6 @@
 난 좀 헷갈리는데..    
 **백 트래킹은 분할 정복을 이용한 완전 검색(Exhaustive Search)기법**      
 어떤 경우에는 문제를 푸는 최선의 알고리즘이 모든 경우의 수를 다 살펴보는 것     
-   
-
+     
+[이분께서 정말 잘 설명해주셨다.](https://gamedevlog.tistory.com/49)    
 
