--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -34,3 +34,11 @@
      
 [이분께서 정말 잘 설명해주셨다.](https://gamedevlog.tistory.com/49)    
 
+## 당첨 리프 노드 찾기  
+* 루트에서 갈 수 있는 노드를 선택한다.   
+* 꽝 노드까지 도달하면 최근의 선택으로 되돌아와서 다시 시작한다.   
+* 더 이상 선택지가 없다면, 이전의 선택지로 돌아가서 다른 선택을 한다.   
+* 루트까지 돌아갔을 경우 더 이상 선택지가 없다면 찾는 답은 없다.   
+
+
+
