--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -33,6 +33,7 @@
 어떤 경우에는 문제를 푸는 최선의 알고리즘이 모든 경우의 수를 다 살펴보는 것     
      
 [이분께서 정말 잘 설명해주셨다.](https://gamedevlog.tistory.com/49)    
+[싸피출신](https://94incheon.github.io/algorithm/Backtracking/)
 
 ## 당첨 리프 노드 찾기  
 * 루트에서 갈 수 있는 노드를 선택한다.   
