--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -42,4 +42,99 @@
 * 루트까지 돌아갔을 경우 더 이상 선택지가 없다면 찾는 답은 없다.   
 
 
+## 8-Queen 문제  
+퀸 8개의 크기 8의 체스판 안에 서롤 공격할 수 없도록, 배치하는 모든 경우를 구하는 문제   
+
+* 후보 해의 수 : 64C8 이므로, 44억개의 후보   
+* 실제 해의 수 : 이중에서 실재 해는 92개뿐  
+* 즉, 44억개 넘는 후보 해의 수 속에서 92개를 최대한 효율적으로 찾아내는 것이 관건   
+
+루트 노드에서 리프노드까지 경로는 해답후보가 되는데,   
+완전 탐색을 하여 그 해답후보중에서 해답을 찾을 수 있다.  
+  
+그러나 이 방법을 사용하면 해답이 될 가능성이 전혀 없는 노드의 후손들도 모두 검색해야 하므로 비효율적이다.  
+
+* 모든 후보 검사? : NO
+* 백트래킹 기법
+  * 어떤 노드의 유망성을 점검한 후에 유망하지 않다고 결정되면 그 노드의 부모로 되돌아가 다음 자식 노드로 간다. (아! 중간 탈출기가 있구나)   
+  * 유망하다 : 어떤 노드를 방문하였을 때, 그 노드를 포함한 경로가 해답이 될 수 있으면 유망하다고 한다.  
+  * 가지치기 : 유망하지 않은 노드가 포함된 경로는 더이상 고려하지 않는다.     
+      
+Nqueen은 같은 행, 같은 열, 대각선 확인한다.           
+스도쿠도 마찬가지겠네!, 스도쿠는 여기서 9칸 다 비교도 들어가겠다.      
+
+### 백트래킹 절차  
+1. 상태공간 트리의 깊이 우선 탐색을 시작
+2. 각 노드가 유망한지를 점검한다.  
+3. 만일 그 노드가 유망하지 않으면, 그 노드의 부모 노드로 돌아가서 다른 노드의 검색을 계속한다.     
+
+```java
+backtrack(node v) 
+    IF promising(v) == flase then return    // 조건에 맞지 않는다면 -> 조건은 여러개다 (퀸을 놓을 수 있는지, 최대값이 나온 경우)       
+    IF there is a solution at v             // 정답이라면 -> 마지막까지 왔다면, 최소갑이면  
+        write the solution 
+    ELSE
+        FOR each child u of v               // 다음 작업을 위해 다음 노드로 이동 조합과 비슷한 방식
+            backtrack(r)   
+
+```
+
+```java
+class BackTracking {
+	static int ans;  
+	static int N;  
+	
+	static int[] col;
+	
+
+	 //현재 퀸이 어느위치에 있는지 위치값이 있어야 된다.      
+	    
+	// 같은 행에는 놓지 않는 방식으로 풀거다
+	// 즉, 현재 퀸의 열 위치만 기억할 수 있게 할 것이다. 
+	public static void main(String[] args) {
+		Scanner scanner = new Scanner(System.in);
+		N = scanner.nextInt();
+		
+		col = new int[N+1];
+
+		setQueen(0);				// 코드 스타일 마다 다름 
+		System.out.println(ans);
+	}
+	
+	public static void setQueen(int rowNo) {
+		
+		// 탈출 , 가능하지 않다면
+		if(!isAvailable(rowNo)) {
+			return;			// 바로 탈출 
+		}
+		
+		if(rowNo == N) { // 끝까지 왔다면 
+			ans++;
+			return;		// 일단 1회 완료  
+		}
+		
+		// 자식노드의 가지를 파생  
+		for(int i=1; i <= N; i++) {
+			col[rowNo+1] = i;			 // 자식노드를 일단 i로 할당해봄 
+			setQueen(rowNo+1);			// 그리고 일단 돌려본다.  
+		}
+		
+		
+	}
+
+	private static boolean isAvailable(int rowNo) {
+		// 가로세로 대각선을 해야하지만, 가로는 rowNo이기에 검사 안해도 된다.    
+		
+		// 대각선 공식 -> (현재.x - 다른.x) == (현재.y - 다른.y) -> 왜? 1,-1의 조합이니까   
+		for(int i=1; i < rowNo; i++) { // 첫번재 퀸부터 직전 퀸
+			// 퀸이 서로 위협적인 위치면 false
+			if(col[rowNo] == col[i] || Math.abs(col[rowNo]-col[i]) == rowNo - i) return false;
+			// 형재 퀸의 행들 빼기, 열 빼기 -> 11 13 22 31 33 -> 22를 기준으로 모든 계산 값은 11이라는 값이 나온다.,  
+		}
+		
+		return true;
+	}
+
+}
+```
 
