--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -147,4 +147,9 @@ class BackTracking {
 메모이제이션은 그 길에 대한 값을 가진 것이지만        
 백트래킹은 그 길 자체를 가지 말라고 말하는 것이다. 이를 가지치기라고 말한다.   
 
+## 상태 공간 트리(가능한 첫번째 해를 만날 때까지의 경우로 가정)   
+같은 행에 퀸을 두지 않는 방식의 깊이 우선 탐색 vs 백트래킹   
+  
+* 같은 행에 퀸을 두지 않는 방식의 깊이 우선 탐색 : 155 
+* 백트래킹 : 27    
 
