--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -170,6 +170,7 @@ class BackTracking {
 유한개의 자연수로 이루어진 집합이 있을 때, 이 집합의 부분집합 중에서  
 그 집합의 원소를 모두 더한 값이 21이 되는 경우가 몇번이나 있는지를 알아내는 문제   
 예를 들어, 5 21 11 16, 6 10 라는 집합이 있을때 5 6 10 는 집합의 부분집합이면서 21이므로 참이 된다  
-     
-`중간에 값이 넘었다면`이라는 가지를 칠 수 있는 명분이 있다.     
-
+      
+`중간에 값이 넘었다면`이라는 가지를 칠 수 있는 명분이 있다.        
+예를들어 난쟁이 문제도, 100을 초과하면 답이 될 수 없으니 가지를 칠 수 있다.   
+리팩토링!!! 백트래킹은 일반 재귀를 리팩토링 할 수 있다.  
