--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -191,9 +191,9 @@ class BackTracking {
 우리는 가능한 파이프를 여러개 **동시에** 설치하는 것을 구하는 것이다.       
 즉, 경우의 수가 아니라 **동시에** 문제를 구하는 것이다.      
 하지만, 동시에라는 작업이 힘들기 때문에 순차적으로 처리한 것일 뿐이다.    
-
-그렇다면 파이프를 놓는 순서는?    
-* 첫번째 파이프를 놓는 위치에 따라 2번째 3번째 파이프가 영향을 받는다.   
-* \
-
+   
+그렇다면 파이프를 놓는 순서는?        
+* 첫번째 파이프를 놓는 위치에 따라 2번째 3번째 파이프가 영향을 받는다.       
+* 그렇기에 처음에 끝까지 도착했다면 계속 리턴하는 방식을 사용하면 된다.       
+* 단, 0의 값도 리턴될 수 있으므로, 1 리턴 되었을 때만 연속으로 리턴한다.  
 
