--- a/퀵정렬.md
+++ b/퀵정렬.md
@@ -1,1 +1,8 @@
+# 퀵정렬 
+주어진 배열을 2개로 분할하고, 각각을 정렬한다.   
 
+* 퀵 정렬은 분할할 때, 기준 아이템(Pivot) 중심으로,   
+* 이보다 작은 것은 왼편, 같거나 큰 것은 오른편에 위치시킨다.   
+
+# 시간 복잡도 
+O(n long n)
