--- a/06_그래프ver2.md
+++ b/06_그래프ver2.md
@@ -129,8 +129,27 @@ ArrayList와 같은 컬렉션을 사용한다면, 속도나 메모리가 조금 
 * Visited 배열 생성 및 false로 초기화  
 * Queue 생성
 * 시작 정점 방문처리 및 enqueue  
-* 
 
+### 입력 파라미터 `그래프 G`와 탐색 시작 `정점 V`
+```java
+BFS(G, v) // 그래프 G와 탐색 시작 정점v
+    큐 생성
+    시장 정점 v를 큐에 삽입
+    정점 v를 방문한 것으로 표시
+    while(큐가 비어 있지 않은 경우) {
+        t <- 큐의 첫 번째 원소 반환
+        for (t와 연결된 모든 간선에 대해) {
+            u <- t의 인접 정점
+            u가 방문되지 않은 곳이면, 
+            u를 큐에 넣고, 방문한 곳으로 표시 
+        }
+    
+    }
+END BFS      
+```  
+
+ 
+ 
 
 
 
