--- a/집합.md
+++ b/집합.md
@@ -23,3 +23,12 @@
 2. 그 둘을 연결하여 집합을 생성하되 특정 요소를 대표자로 정한다. (a와b가 있다면 a에 b 연결 -> a대표)   
 3. 다른 집합도 마찬가지로 생성한다.  
 4. 이런식으로 집합과 집합의 `더 큰 집합`을 만들고 대표자 한명을 선정한다    
+
+# 연결리스트
+같은 집합의 원소들은 하나의 연결리스트로 관리한다.    
+연결리스트의 맨앞의 원소를 집합의 대표 원소로 삼는다.   
+각 원소는 집합의 대표 원소를 가리키는 링크를 갖는다.
+
+즉, 링크를 2개 가지고 있다는 말이다.   
+
+## Make_Set : 
